commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
+++ b/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2fc97359b3817804326bebd2e520823a02570a12
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: 2c8939d9530cfcd31f7c810944822a2661bf6dcb
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30307405"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575179"
 items:
-- uid: excel.Excel.ArrowHeadWidth
+- uid: excel.Excel.ArrowheadWidth
   summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
   isPreview: true
-  name: Excel.ArrowHeadWidth
-  fullName: Excel.ArrowHeadWidth
+  name: Excel.ArrowheadWidth
+  fullName: Excel.ArrowheadWidth
   langs:
   - typeScript
   type: enum
   package: excel
   children:
-  - excel.Excel.ArrowHeadWidth.medium
-  - excel.Excel.ArrowHeadWidth.narrow
-  - excel.Excel.ArrowHeadWidth.wide
-- uid: excel.Excel.ArrowHeadWidth.medium
+  - excel.Excel.ArrowheadWidth.medium
+  - excel.Excel.ArrowheadWidth.narrow
+  - excel.Excel.ArrowheadWidth.wide
+- uid: excel.Excel.ArrowheadWidth.medium
   isPreview: true
   name: medium
   fullName: medium
@@ -27,7 +27,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Medium\""
-- uid: excel.Excel.ArrowHeadWidth.narrow
+- uid: excel.Excel.ArrowheadWidth.narrow
   isPreview: true
   name: narrow
   fullName: narrow
@@ -35,7 +35,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Narrow\""
-- uid: excel.Excel.ArrowHeadWidth.wide
+- uid: excel.Excel.ArrowheadWidth.wide
   isPreview: true
   name: wide
   fullName: wide
