--- a/docs/docs-ref-autogen/excel/excel.image.yml
+++ b/docs/docs-ref-autogen/excel/excel.image.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 03af886840e9b3df7d3796ba913e024ba07753f9
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: 737731cf0427be95d4f6208c664862287d704903
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303121"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575772"
 items:
 - uid: excel.Excel.Image
   summary: >-
-    代表工作表中的图像对象。
+    代表工作表中的图像。 若要获取相应的 Shape 对象, 请使用 Image. Shape。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -63,7 +63,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const image = sheet.shapes.getItem(\"Image\").image;\n    image.load(\"format\");\n    await context.sync();\n\n    console.log(\"The image's format is: \" + image.format);\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Image.id
   summary: >-
-    代表 image 对象的形状标识符。 只读。
+    表示图像对象的形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -79,7 +79,7 @@ items:
       type:
       - string
 - uid: excel.Excel.Image.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -109,7 +109,7 @@ items:
       type:
       - excel.Excel.Interfaces.ImageLoadOptions
 - uid: excel.Excel.Image.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -128,7 +128,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.Image.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -148,7 +148,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.Image.shape
   summary: >-
-    返回图像的 shape 对象。 只读。
+    返回与图像关联的 Shape 对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -164,7 +164,7 @@ items:
       type:
       - excel.Excel.Shape
 - uid: excel.Excel.Image.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始的 Excel 图像对象是 API 对象, 但该`toJSON`方法将返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.ImageData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 图像对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ImageData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
