--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 43adc4885ac843212c44822317c6b70e1870c3e3
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a9c13c910bff51c385e2bcd7ce8cd61500edfd6c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107832"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575282"
 items:
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions
   summary: >-
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.$all
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.content
+  - excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.id
   - excel.Excel.Interfaces.CommentCollectionLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.$all
@@ -36,9 +39,43 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
+  summary: >-
+    对于集合中的每个项目: 获取注释的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
+  summary: >-
+    对于集合中的每个项目: 获取注释的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.content
   summary: >-
-    对于集合中的每一项: 获取/设置内容。
+    对于集合中的每一项: 获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -50,6 +87,23 @@ items:
   type: property
   syntax:
     content: 'content?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
+  summary: >-
+    对于集合中的每个项目: 获取注释的创建时间。 如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
     return:
       type:
       - boolean
@@ -72,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.isParent
   summary: >-
-    对于集合中的每一项: 表示它是注释线程还是答复。 在此处始终返回 true。 只读。
+    对于集合中的每一项: 表示它是注释线程还是答复。 在此处始终返回 True。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
