--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 87fc4e58123dc4ec923d72ced61527fa06d9c393
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 9ea5c8e2697c0a5bd0735cff9731cb913fe537f9
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117464"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575450"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyData
   summary: 描述通过调用 "commentReply ()" 返回的数据的接口。
@@ -15,12 +15,49 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.CommentReplyData.authorEmail
+  - excel.Excel.Interfaces.CommentReplyData.authorName
   - excel.Excel.Interfaces.CommentReplyData.content
+  - excel.Excel.Interfaces.CommentReplyData.creationDate
   - excel.Excel.Interfaces.CommentReplyData.id
   - excel.Excel.Interfaces.CommentReplyData.isParent
+- uid: excel.Excel.Interfaces.CommentReplyData.authorEmail
+  summary: >-
+    获取批注答复的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: string;'
+    return:
+      type:
+      - string
+- uid: excel.Excel.Interfaces.CommentReplyData.authorName
+  summary: >-
+    获取批注答复的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: string;'
+    return:
+      type:
+      - string
 - uid: excel.Excel.Interfaces.CommentReplyData.content
   summary: >-
-    获取/设置内容。
+    获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -35,9 +72,26 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.CommentReplyData.creationDate
+  summary: >-
+    获取批注答复的创建时间。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: Date;'
+    return:
+      type:
+      - Date
 - uid: excel.Excel.Interfaces.CommentReplyData.id
   summary: >-
-    表示批注答复标识符。 只读。
+    表示批注回复标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -54,7 +108,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.CommentReplyData.isParent
   summary: >-
-    表示它是注释线程还是答复。 在此处始终返回 false。 只读。
+    表示它是批注线程还是回复。 在此处始终返回 False。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
