--- a/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7084874e74f45180aa6608ccf179d2ccfefb71ae
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 1ff3a0897e28245cc03687ec0ae6b6660e13764f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111822"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575520"
 items:
 - uid: excel.Excel.Interfaces.GeometricShapeData
   summary: 描述通过调用 "geometricShape ()" 返回的数据的接口。
@@ -18,7 +18,7 @@ items:
   - excel.Excel.Interfaces.GeometricShapeData.id
 - uid: excel.Excel.Interfaces.GeometricShapeData.id
   summary: >-
-    代表形状标识符。 只读。
+    返回形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
