--- a/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.geometricshapeloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 456e5c0bb9099ef0c8dc4d7bd49463e08d5795b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 033602026acda0f436435c061243d2d858a27609
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115049"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575576"
 items:
 - uid: excel.Excel.Interfaces.GeometricShapeLoadOptions
   summary: >-
-    代表工作表中的一个几何形状对象。 几何形状可以是 Excel 中的线条、矩形、块箭头、公式、流程图、开始、横幅、标注或基本形状。
+    代表工作表中的几何形状。 在 Excel 中, 几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -37,7 +37,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GeometricShapeLoadOptions.id
   summary: >-
-    代表形状标识符。 只读。
+    返回形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
