--- a/docs/docs-ref-autogen/excel/excel.interfaces.groupshapecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.groupshapecollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a1db16687c7ce5b035a064c1fc686a89b4475a1b
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: 5ea04ad9a23c92316a1682229eac7185ddc8e040
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303086"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575765"
 items:
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions
   summary: >-
@@ -60,7 +60,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.altTextDescription
   summary: >-
-    对于集合中的每一项: 当将对象保存到网页时, 返回或设置 Shape 对象的替代的描述性文本字符串。
+    对于集合中的每一项: 返回或设置 Shape 对象的替代说明文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -77,7 +77,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.altTextTitle
   summary: >-
-    对于集合中的每一项: 当将对象保存到网页中时, 返回或设置 Shape 对象的替代标题文本字符串。
+    对于集合中的每一项: 返回或设置 Shape 对象的可选标题文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -94,7 +94,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.connectionSiteCount
   summary: >-
-    对于集合中的每一项: 返回指定形状上的连接结点的数目。 只读。
+    对于集合中的每个项目: 返回此形状上的连接结点的数目。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -111,7 +111,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.fill
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的填充格式。
+    对于集合中的每一项: 返回此形状的填充格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -128,7 +128,7 @@ items:
       - excel.Excel.Interfaces.ShapeFillLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.geometricShape
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的几何形状。 如果 shape 对象是其他形状类型 (如图像、SmartArt 等) 而不是 GeometricShape, 则会引发错误。
+    对于集合中的每个项目: 返回与形状相关联的几何形状。 如果形状类型不是 "GeometricShape", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -145,7 +145,7 @@ items:
       - excel.Excel.Interfaces.GeometricShapeLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.geometricShapeType
   summary: >-
-    对于集合中的每一项: 代表指定形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状不是几何图形 (例如, get GeometricShapeType of line 或 chart 将返回 null), 则返回 null。
+    对于集合中的每一项: 表示此几何形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状类型不是 "GeometricShape", 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -162,7 +162,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.group
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的形状组。 如果 shape 对象是其他形状类型 (如图像、SmartArt 等) 而不是 GroupShape, 则会引发错误。
+    对于集合中的每个项目: 返回与形状相关联的形状组。 如果形状类型不是 "GroupShape", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -213,7 +213,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.image
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的图像。 如果 shape 对象是其他形状类型 (如 GeometricShape、SmartArt 等) 而不是图像, 则会引发错误。
+    对于集合中的每个项目: 返回与该形状相关联的图像。 如果形状类型不是 "Image", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -230,7 +230,7 @@ items:
       - excel.Excel.Interfaces.ImageLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.left
   summary: >-
-    对于集合中的每个项目: 从工作表左侧形状左侧的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    对于集合中的每个项目: 从形状左侧到工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -247,7 +247,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.level
   summary: >-
-    对于集合中的每一项: 代表指定形状的级别。 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 等等。
+    对于集合中的每一项: 代表指定形状的级别。 例如, 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 而级别为2表示该形状是顶层的子组的一部分。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -264,7 +264,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.line
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的 line 对象。 如果 shape 对象是其他形状类型 (如 GeometricShape、SmartArt 等) 而不是图像, 则会引发错误。
+    对于集合中的每一项: 返回与形状相关联的线条。 如果形状类型不是 "Line", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -281,7 +281,7 @@ items:
       - excel.Excel.Interfaces.LineLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.lineFormat
   summary: >-
-    对于集合中的每一项: 返回 shape 对象的线条格式。
+    对于集合中的每一项: 返回此形状的线条格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -298,7 +298,7 @@ items:
       - excel.Excel.Interfaces.ShapeLineFormatLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.lockAspectRatio
   summary: >-
-    对于集合中的每一项: 表示纵横比是否锁定 (以布尔的形式)。
+    对于集合中的每一项: 指定是否锁定此形状的纵横比。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -332,7 +332,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.parentGroup
   summary: >-
-    对于集合中的每一项: 代表指定形状的父组。
+    对于集合中的每个项目: 代表此形状的父组。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -349,7 +349,7 @@ items:
       - excel.Excel.Interfaces.ShapeLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.placement
   summary: >-
-    对于集合中的每一项: 代表 placment 的值, 该值代表对象附加到其下的单元格的方式。
+    对于集合中的每个项目: 代表如何将对象附加到其下的单元格。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -383,7 +383,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.textFrame
   summary: >-
-    对于集合中的每一项: 返回形状的 textFrame 对象。 只读。
+    对于集合中的每一项: 返回此形状的文本框架对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -400,7 +400,7 @@ items:
       - excel.Excel.Interfaces.TextFrameLoadOptions
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.top
   summary: >-
-    对于集合中的每一项: 从形状的上边缘到工作表的顶部的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    对于集合中的每个项目: 从形状的上边缘到工作表的上边缘之间的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -417,7 +417,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.type
   summary: >-
-    对于集合中的每一项: 返回指定形状的类型。 只读。 有关详细信息, 请参阅 ShapeType。
+    对于集合中的每一项: 返回此形状的类型。 有关详细信息, 请参阅 ShapeType。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -434,7 +434,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.visible
   summary: >-
-    对于集合中的每一项: 代表指定形状的可见性 (以布尔值表示)。
+    对于集合中的每一项: 表示此形状的可见性。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -468,7 +468,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.zorderPosition
   summary: >-
-    对于集合中的每一项: 返回指定的形状在 z-顺序中的位置, 底部形状的 z-顺序值为0。 只读。
+    对于集合中的每一项: 返回指定的形状在 z-顺序中的位置, 0 表示顺序堆栈的底部。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
