--- a/docs/docs-ref-autogen/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.imagedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5a2d32e8f11fa1e1f3fa1f9b483c8b2be630fec0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 9afeeb6758f936c5f544c52aac18020df43ed475
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115630"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575436"
 items:
 - uid: excel.Excel.Interfaces.ImageData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -36,7 +36,7 @@ items:
       - Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"
 - uid: excel.Excel.Interfaces.ImageData.id
   summary: >-
-    代表 image 对象的形状标识符。 只读。
+    表示图像对象的形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
