--- a/docs/docs-ref-autogen/excel/excel.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.imageloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9b57917e42d7346e502e90bb15f46b245a4e0000
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0d4e280de2d5c3fa3924a30dbc4fe2ae241be201
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109330"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575219"
 items:
 - uid: excel.Excel.Interfaces.ImageLoadOptions
   summary: >-
-    代表工作表中的图像对象。
+    代表工作表中的图像。 若要获取相应的 Shape 对象, 请使用 Image. Shape。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -55,7 +55,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ImageLoadOptions.id
   summary: >-
-    代表 image 对象的形状标识符。 只读。
+    表示图像对象的形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -72,7 +72,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ImageLoadOptions.shape
   summary: >-
-    返回图像的 shape 对象。
+    返回与图像关联的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
