--- a/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 79d01ec03eebffe59e5b6d61fc829c329aa4d82b
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: ac68f9987f3be112d67c72e8e949655415112daf
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303058"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575485"
 items:
 - uid: excel.Excel.Interfaces.LineUpdateData
-  summary: 用于更新 line 对象上的数据的接口, 可用于 "line. set (<!-- -->{...}"<!-- -->)".
+  summary: 一个用于更新 line 对象上的数据的接口, 可用于 "line. set (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.LineUpdateData
   fullName: Excel.Interfaces.LineUpdateData
   langs:
@@ -15,67 +15,67 @@ items:
   type: interface
   package: excel
   children:
-  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
-  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
-  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowheadLength
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowheadStyle
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowheadWidth
   - excel.Excel.Interfaces.LineUpdateData.connectorType
-  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
-  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
-  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
-- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineUpdateData.endArrowheadLength
+  - excel.Excel.Interfaces.LineUpdateData.endArrowheadStyle
+  - excel.Excel.Interfaces.LineUpdateData.endArrowheadWidth
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowheadLength
   summary: >-
     表示指定线条开头的箭头的长度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: beginArrowHeadLength
-  fullName: beginArrowHeadLength
+  name: beginArrowheadLength
+  fullName: beginArrowheadLength
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'beginArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    content: 'beginArrowheadLength?: Excel.ArrowheadLength | "Short" | "Medium" | "Long";'
     return:
       type:
-      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
-- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
+      - Excel.ArrowheadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowheadStyle
   summary: >-
     表示指定线条开头的箭头样式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: beginArrowHeadStyle
-  fullName: beginArrowHeadStyle
+  name: beginArrowheadStyle
+  fullName: beginArrowheadStyle
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'beginArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    content: 'beginArrowheadStyle?: Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
     return:
       type:
-      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
-- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
+      - Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowheadWidth
   summary: >-
     表示指定线条的起点的箭头宽度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: beginArrowHeadWidth
-  fullName: beginArrowHeadWidth
+  name: beginArrowheadWidth
+  fullName: beginArrowheadWidth
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'beginArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    content: 'beginArrowheadWidth?: Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide";'
     return:
       type:
-      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+      - Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide"
 - uid: excel.Excel.Interfaces.LineUpdateData.connectorType
   summary: >-
-    表示线条的连接线类型。
+    表示线条的连接器类型。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -90,54 +90,54 @@ items:
     return:
       type:
       - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
-- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowheadLength
   summary: >-
     表示指定线条末端的箭头长度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: endArrowHeadLength
-  fullName: endArrowHeadLength
+  name: endArrowheadLength
+  fullName: endArrowheadLength
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'endArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    content: 'endArrowheadLength?: Excel.ArrowheadLength | "Short" | "Medium" | "Long";'
     return:
       type:
-      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
-- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
+      - Excel.ArrowheadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowheadStyle
   summary: >-
     表示指定线条末端的箭头样式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: endArrowHeadStyle
-  fullName: endArrowHeadStyle
+  name: endArrowheadStyle
+  fullName: endArrowheadStyle
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'endArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    content: 'endArrowheadStyle?: Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
     return:
       type:
-      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
-- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
+      - Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowheadWidth
   summary: >-
     表示指定线条末端的箭头宽度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: endArrowHeadWidth
-  fullName: endArrowHeadWidth
+  name: endArrowheadWidth
+  fullName: endArrowheadWidth
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'endArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    content: 'endArrowheadWidth?: Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide";'
     return:
       type:
-      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+      - Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide"
