--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d4430982ba90c6d67bb01b3b108f6bf4a214052d
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: a7c38290f8969036d4fcf0823e4e474c53334199
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303093"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575947"
 items:
 - uid: excel.Excel.Interfaces.ShapeData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -36,7 +36,7 @@ items:
   - excel.Excel.Interfaces.ShapeData.zorderPosition
 - uid: excel.Excel.Interfaces.ShapeData.altTextDescription
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代的描述性文本字符串。
+    返回或设置 Shape 对象的替代说明文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -53,7 +53,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeData.altTextTitle
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代标题文本字符串。
+    返回或设置 Shape 对象的可选标题文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -70,7 +70,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeData.connectionSiteCount
   summary: >-
-    返回指定形状中的连结点的数量。只读。
+    返回此形状上的连接网站数。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -87,7 +87,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.fill
   summary: >-
-    返回 shape 对象的填充格式。 只读。
+    返回此形状的填充格式。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -104,7 +104,7 @@ items:
       - excel.Excel.Interfaces.ShapeFillData
 - uid: excel.Excel.Interfaces.ShapeData.geometricShapeType
   summary: >-
-    代表指定形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状不是几何图形 (例如, get GeometricShapeType of line 或 chart 将返回 null), 则返回 null。
+    表示此几何形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状类型不是 "GeometricShape", 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -121,7 +121,7 @@ items:
       - Excel.GeometricShapeType | "LineInverse" | "Triangle" | "RightTriangle" | "Rectangle" | "Diamond" | "Parallelogram" | "Trapezoid" | "NonIsoscelesTrapezoid" | "Pentagon" | "Hexagon" | "Heptagon" | "Octagon" | "Decagon" | "Dodecagon" | "Star4" | "Star5" | "Star6" | "Star7" | "Star8" | "Star10" | "Star12" | "Star16" | "Star24" | "Star32" | "RoundRectangle" | "Round1Rectangle" | "Round2SameRectangle" | "Round2DiagonalRectangle" | "SnipRoundRectangle" | "Snip1Rectangle" | "Snip2SameRectangle" | "Snip2DiagonalRectangle" | "Plaque" | "Ellipse" | "Teardrop" | "HomePlate" | "Chevron" | "PieWedge" | "Pie" | "BlockArc" | "Donut" | "NoSmoking" | "RightArrow" | "LeftArrow" | "UpArrow" | "DownArrow" | "StripedRightArrow" | "NotchedRightArrow" | "BentUpArrow" | "LeftRightArrow" | "UpDownArrow" | "LeftUpArrow" | "LeftRightUpArrow" | "QuadArrow" | "LeftArrowCallout" | "RightArrowCallout" | "UpArrowCallout" | "DownArrowCallout" | "LeftRightArrowCallout" | "UpDownArrowCallout" | "QuadArrowCallout" | "BentArrow" | "UturnArrow" | "CircularArrow" | "LeftCircularArrow" | "LeftRightCircularArrow" | "CurvedRightArrow" | "CurvedLeftArrow" | "CurvedUpArrow" | "CurvedDownArrow" | "SwooshArrow" | "Cube" | "Can" | "LightningBolt" | "Heart" | "Sun" | "Moon" | "SmileyFace" | "IrregularSeal1" | "IrregularSeal2" | "FoldedCorner" | "Bevel" | "Frame" | "HalfFrame" | "Corner" | "DiagonalStripe" | "Chord" | "Arc" | "LeftBracket" | "RightBracket" | "LeftBrace" | "RightBrace" | "BracketPair" | "BracePair" | "Callout1" | "Callout2" | "Callout3" | "AccentCallout1" | "AccentCallout2" | "AccentCallout3" | "BorderCallout1" | "BorderCallout2" | "BorderCallout3" | "AccentBorderCallout1" | "AccentBorderCallout2" | "AccentBorderCallout3" | "WedgeRectCallout" | "WedgeRRectCallout" | "WedgeEllipseCallout" | "CloudCallout" | "Cloud" | "Ribbon" | "Ribbon2" | "EllipseRibbon" | "EllipseRibbon2" | "LeftRightRibbon" | "VerticalScroll" | "HorizontalScroll" | "Wave" | "DoubleWave" | "Plus" | "FlowChartProcess" | "FlowChartDecision" | "FlowChartInputOutput" | "FlowChartPredefinedProcess" | "FlowChartInternalStorage" | "FlowChartDocument" | "FlowChartMultidocument" | "FlowChartTerminator" | "FlowChartPreparation" | "FlowChartManualInput" | "FlowChartManualOperation" | "FlowChartConnector" | "FlowChartPunchedCard" | "FlowChartPunchedTape" | "FlowChartSummingJunction" | "FlowChartOr" | "FlowChartCollate" | "FlowChartSort" | "FlowChartExtract" | "FlowChartMerge" | "FlowChartOfflineStorage" | "FlowChartOnlineStorage" | "FlowChartMagneticTape" | "FlowChartMagneticDisk" | "FlowChartMagneticDrum" | "FlowChartDisplay" | "FlowChartDelay" | "FlowChartAlternateProcess" | "FlowChartOffpageConnector" | "ActionButtonBlank" | "ActionButtonHome" | "ActionButtonHelp" | "ActionButtonInformation" | "ActionButtonForwardNext" | "ActionButtonBackPrevious" | "ActionButtonEnd" | "ActionButtonBeginning" | "ActionButtonReturn" | "ActionButtonDocument" | "ActionButtonSound" | "ActionButtonMovie" | "Gear6" | "Gear9" | "Funnel" | "MathPlus" | "MathMinus" | "MathMultiply" | "MathDivide" | "MathEqual" | "MathNotEqual" | "CornerTabs" | "SquareTabs" | "PlaqueTabs" | "ChartX" | "ChartStar" | "ChartPlus"
 - uid: excel.Excel.Interfaces.ShapeData.height
   summary: >-
-    表示形状的高度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -138,7 +138,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.id
   summary: >-
-    代表形状标识符。 只读。
+    表示形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -155,7 +155,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeData.left
   summary: >-
-    形状左侧距工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状左侧到工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -172,7 +172,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.level
   summary: >-
-    代表指定形状的级别。 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 等等。
+    表示指定形状的级别。 例如, 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 而级别为2表示该形状是顶层的子组的一部分。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -189,7 +189,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.lineFormat
   summary: >-
-    返回 shape 对象的线条格式。 只读。
+    返回此形状的线条格式。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -206,7 +206,7 @@ items:
       - excel.Excel.Interfaces.ShapeLineFormatData
 - uid: excel.Excel.Interfaces.ShapeData.lockAspectRatio
   summary: >-
-    表示纵横比是否锁定, 以布尔形式表示的形状。
+    指定是否锁定此形状的纵横比。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -223,7 +223,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeData.name
   summary: >-
-    代表形状的名称。
+    表示形状的名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -240,7 +240,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeData.placement
   summary: >-
-    代表 placment 的值, 该值代表对象附加到其下的单元格的方式。
+    表示对象附加到其下的单元格的方式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -257,7 +257,7 @@ items:
       - Excel.Placement | "TwoCell" | "OneCell" | "Absolute"
 - uid: excel.Excel.Interfaces.ShapeData.rotation
   summary: >-
-    表示形状的旋转角度 (以度为单位)。
+    表示形状的旋转度数。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -274,7 +274,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.top
   summary: >-
-    从形状的上边缘到工作表的顶端之间的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状的上边缘到工作表的上边缘之间的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -291,7 +291,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.type
   summary: >-
-    返回指定形状的类型。 只读。 有关详细信息, 请参阅 ShapeType。
+    返回此形状的类型。 有关详细信息, 请参阅 ShapeType。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -302,13 +302,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'type?: Excel.ShapeType | "Unknown" | "Image" | "GeometricShape" | "Group" | "Line";'
+    content: 'type?: Excel.ShapeType | "Unsupported" | "Image" | "GeometricShape" | "Group" | "Line";'
     return:
       type:
-      - Excel.ShapeType | "Unknown" | "Image" | "GeometricShape" | "Group" | "Line"
+      - Excel.ShapeType | "Unsupported" | "Image" | "GeometricShape" | "Group" | "Line"
 - uid: excel.Excel.Interfaces.ShapeData.visible
   summary: >-
-    表示指定形状的可见性 (以布尔值表示)。
+    表示此形状的可见性。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -325,7 +325,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeData.width
   summary: >-
-    表示形状的宽度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -342,7 +342,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeData.zorderPosition
   summary: >-
-    返回指定的形状在 z-顺序中的位置, 则底部形状的 z-顺序值为0。 只读。
+    返回指定的形状在 z-顺序中的位置, 0 表示顺序栈的底部。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
