--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefillloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c69c4da2f585ae6dfc9555937d0ce9724833518b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: db114948df34bda06f3b04b904c7aaf8a98225ad
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107867"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575457"
 items:
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions
   summary: >-
@@ -21,7 +21,7 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.ShapeFillLoadOptions.$all
-  - excel.Excel.Interfaces.ShapeFillLoadOptions.foreColor
+  - excel.Excel.Interfaces.ShapeFillLoadOptions.foregroundColor
   - excel.Excel.Interfaces.ShapeFillLoadOptions.transparency
   - excel.Excel.Interfaces.ShapeFillLoadOptions.type
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions.$all
@@ -36,26 +36,26 @@ items:
     return:
       type:
       - boolean
-- uid: excel.Excel.Interfaces.ShapeFillLoadOptions.foreColor
+- uid: excel.Excel.Interfaces.ShapeFillLoadOptions.foregroundColor
   summary: >-
-    代表形状填充的前景色, 格式为\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
+    代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: foreColor
-  fullName: foreColor
+  name: foregroundColor
+  fullName: foregroundColor
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'foreColor?: boolean;'
+    content: 'foregroundColor?: boolean;'
     return:
       type:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFillLoadOptions.transparency
   summary: >-
-    以 0.0 (不透明) 到 1.0 (清除) 的值的形式返回或设置指定填充的透明度。 对于不支持 API 的形状类型或具有不一致透明度的特殊填充类型, 返回 null。 例如, 渐变填充类型可能具有不一致的透明胶片。
+    以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。 如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
