--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fc1d7f2ecf71a03181156e0d2b196db2af9775e0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: fa1618ecfa2963ceaa2d56af8038dfc5332bada8
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106957"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575513"
 items:
 - uid: excel.Excel.Interfaces.ShapeFontData
   summary: 描述通过调用 "shapeFont ()" 返回的数据的接口。
@@ -23,7 +23,7 @@ items:
   - excel.Excel.Interfaces.ShapeFontData.underline
 - uid: excel.Excel.Interfaces.ShapeFontData.bold
   summary: >-
-    表示字体的加粗状态。 返回 null TextRange 同时包含粗体和非粗体文本片段。
+    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -40,7 +40,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontData.color
   summary: >-
-    文本颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。 如果 TextRange 包含具有不同颜色的文本片段, 则返回 null。
+    文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -74,7 +74,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontData.name
   summary: >-
-    表示字体名称 (例如, "Calibri")。 如果文本为复杂文种或东亚语言, 则表示相应的字体名称;否则表示西文字体名称。
+    表示字体名称（例如“Calibri”）。 如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -91,7 +91,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeFontData.size
   summary: >-
-    表示字体大小, 以磅为单位 (例如 11)。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
+    表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -108,7 +108,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeFontData.underline
   summary: >-
-    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息, 请参阅 ShapeFontUnderlineStyle。
+    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
