--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 15e856f8aa52ea3f9d996c3279b1944b5ef568e0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ffef2f7a7bb5f51b7cbd7406c30362a16a8b0241
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30110814"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575492"
 items:
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions
   summary: >-
-    此对象表示形状中的 TextRange 的字体属性 (字体名称、字体大小、颜色等)。
+    代表形状的 TextRange 对象的字体属性, 如字体名称、字体大小和颜色。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -41,7 +41,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.bold
   summary: >-
-    表示字体的加粗状态。 返回 null TextRange 同时包含粗体和非粗体文本片段。
+    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -58,7 +58,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.color
   summary: >-
-    文本颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。 如果 TextRange 包含具有不同颜色的文本片段, 则返回 null。
+    文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -92,7 +92,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.name
   summary: >-
-    表示字体名称 (例如, "Calibri")。 如果文本为复杂文种或东亚语言, 则表示相应的字体名称;否则表示西文字体名称。
+    表示字体名称（例如“Calibri”）。 如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -109,7 +109,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.size
   summary: >-
-    表示字体大小, 以磅为单位 (例如 11)。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
+    表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -126,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontLoadOptions.underline
   summary: >-
-    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息, 请参阅 ShapeFontUnderlineStyle。
+    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
