--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4e8e2d4132ce0ea5dcff5f05cd4d6f9026a49342
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d923d8f5a99dfcafe9b1071e895bb489a9abb4a5
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105557"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575289"
 items:
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData
-  summary: 用于更新 ShapeFont 对象上的数据的接口, 用于在 "ShapeFont" 中使用 (<!-- -->{...}<!-- -->)".
+  summary: 一个用于更新 ShapeFont 对象上的数据的接口, 可用于 "ShapeFont (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.ShapeFontUpdateData
   fullName: Excel.Interfaces.ShapeFontUpdateData
   langs:
@@ -23,7 +23,7 @@ items:
   - excel.Excel.Interfaces.ShapeFontUpdateData.underline
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData.bold
   summary: >-
-    表示字体的加粗状态。 返回 null TextRange 同时包含粗体和非粗体文本片段。
+    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -40,7 +40,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData.color
   summary: >-
-    文本颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。 如果 TextRange 包含具有不同颜色的文本片段, 则返回 null。
+    文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -74,7 +74,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData.name
   summary: >-
-    表示字体名称 (例如, "Calibri")。 如果文本为复杂文种或东亚语言, 则表示相应的字体名称;否则表示西文字体名称。
+    表示字体名称（例如“Calibri”）。 如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -91,7 +91,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData.size
   summary: >-
-    表示字体大小, 以磅为单位 (例如 11)。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
+    表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -108,7 +108,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeFontUpdateData.underline
   summary: >-
-    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息, 请参阅 ShapeFontUnderlineStyle。
+    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
