--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4d9512e837933430b70b9d978639158e34d24c1b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 400593452c9477a785b691df4aa318f77b46038f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113124"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575583"
 items:
 - uid: excel.Excel.Interfaces.ShapeGroupData
   summary: 描述通过调用 "shapeGroup ()" 返回的数据的接口。
@@ -19,7 +19,7 @@ items:
   - excel.Excel.Interfaces.ShapeGroupData.shapes
 - uid: excel.Excel.Interfaces.ShapeGroupData.id
   summary: >-
-    代表形状标识符。 只读。
+    表示形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -36,7 +36,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeGroupData.shapes
   summary: >-
-    返回组中的形状集合。 只读。
+    返回 Shape 对象的集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
