--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegrouploadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegrouploadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 166833680a111826290170bbac0b7d21415caab8
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ee4357c3f0f36132ac8607d7c65607024386e5e0
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117714"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575416"
 items:
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions
   summary: >-
-    代表工作表中的形状组对象。
+    代表工作表中的形状组。 若要获取相应的 Shape 对象, 请使用`ShapeGroup.shape`<!-- -->.
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -37,7 +37,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions.id
   summary: >-
-    代表形状标识符。 只读。
+    表示形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -54,7 +54,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeGroupLoadOptions.shape
   summary: >-
-    返回组的 shape 对象。
+    返回与组相关联的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
