--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapeupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5301b6066ebea474eeb0cb729a1593850d1c19f6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 96567425bff28b5b18e4ca72bec394d8a7d0403e
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117212"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575793"
 items:
 - uid: excel.Excel.Interfaces.ShapeUpdateData
-  summary: 一个用于更新 shape 对象上的数据的接口, 可用于 "shape. set (<!-- -->{...}"<!-- -->)".
+  summary: 用于更新 shape 对象上的数据的接口, 可用于 "shape. set (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.ShapeUpdateData
   fullName: Excel.Interfaces.ShapeUpdateData
   langs:
@@ -31,7 +31,7 @@ items:
   - excel.Excel.Interfaces.ShapeUpdateData.width
 - uid: excel.Excel.Interfaces.ShapeUpdateData.altTextDescription
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代的描述性文本字符串。
+    返回或设置 Shape 对象的替代说明文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -48,7 +48,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeUpdateData.altTextTitle
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代标题文本字符串。
+    返回或设置 Shape 对象的可选标题文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -65,7 +65,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeUpdateData.fill
   summary: >-
-    返回 shape 对象的填充格式。
+    返回此形状的填充格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -82,7 +82,7 @@ items:
       - excel.Excel.Interfaces.ShapeFillUpdateData
 - uid: excel.Excel.Interfaces.ShapeUpdateData.geometricShapeType
   summary: >-
-    代表指定形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状不是几何图形 (例如, get GeometricShapeType of line 或 chart 将返回 null), 则返回 null。
+    表示此几何形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状类型不是 "GeometricShape", 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -99,7 +99,7 @@ items:
       - Excel.GeometricShapeType | "LineInverse" | "Triangle" | "RightTriangle" | "Rectangle" | "Diamond" | "Parallelogram" | "Trapezoid" | "NonIsoscelesTrapezoid" | "Pentagon" | "Hexagon" | "Heptagon" | "Octagon" | "Decagon" | "Dodecagon" | "Star4" | "Star5" | "Star6" | "Star7" | "Star8" | "Star10" | "Star12" | "Star16" | "Star24" | "Star32" | "RoundRectangle" | "Round1Rectangle" | "Round2SameRectangle" | "Round2DiagonalRectangle" | "SnipRoundRectangle" | "Snip1Rectangle" | "Snip2SameRectangle" | "Snip2DiagonalRectangle" | "Plaque" | "Ellipse" | "Teardrop" | "HomePlate" | "Chevron" | "PieWedge" | "Pie" | "BlockArc" | "Donut" | "NoSmoking" | "RightArrow" | "LeftArrow" | "UpArrow" | "DownArrow" | "StripedRightArrow" | "NotchedRightArrow" | "BentUpArrow" | "LeftRightArrow" | "UpDownArrow" | "LeftUpArrow" | "LeftRightUpArrow" | "QuadArrow" | "LeftArrowCallout" | "RightArrowCallout" | "UpArrowCallout" | "DownArrowCallout" | "LeftRightArrowCallout" | "UpDownArrowCallout" | "QuadArrowCallout" | "BentArrow" | "UturnArrow" | "CircularArrow" | "LeftCircularArrow" | "LeftRightCircularArrow" | "CurvedRightArrow" | "CurvedLeftArrow" | "CurvedUpArrow" | "CurvedDownArrow" | "SwooshArrow" | "Cube" | "Can" | "LightningBolt" | "Heart" | "Sun" | "Moon" | "SmileyFace" | "IrregularSeal1" | "IrregularSeal2" | "FoldedCorner" | "Bevel" | "Frame" | "HalfFrame" | "Corner" | "DiagonalStripe" | "Chord" | "Arc" | "LeftBracket" | "RightBracket" | "LeftBrace" | "RightBrace" | "BracketPair" | "BracePair" | "Callout1" | "Callout2" | "Callout3" | "AccentCallout1" | "AccentCallout2" | "AccentCallout3" | "BorderCallout1" | "BorderCallout2" | "BorderCallout3" | "AccentBorderCallout1" | "AccentBorderCallout2" | "AccentBorderCallout3" | "WedgeRectCallout" | "WedgeRRectCallout" | "WedgeEllipseCallout" | "CloudCallout" | "Cloud" | "Ribbon" | "Ribbon2" | "EllipseRibbon" | "EllipseRibbon2" | "LeftRightRibbon" | "VerticalScroll" | "HorizontalScroll" | "Wave" | "DoubleWave" | "Plus" | "FlowChartProcess" | "FlowChartDecision" | "FlowChartInputOutput" | "FlowChartPredefinedProcess" | "FlowChartInternalStorage" | "FlowChartDocument" | "FlowChartMultidocument" | "FlowChartTerminator" | "FlowChartPreparation" | "FlowChartManualInput" | "FlowChartManualOperation" | "FlowChartConnector" | "FlowChartPunchedCard" | "FlowChartPunchedTape" | "FlowChartSummingJunction" | "FlowChartOr" | "FlowChartCollate" | "FlowChartSort" | "FlowChartExtract" | "FlowChartMerge" | "FlowChartOfflineStorage" | "FlowChartOnlineStorage" | "FlowChartMagneticTape" | "FlowChartMagneticDisk" | "FlowChartMagneticDrum" | "FlowChartDisplay" | "FlowChartDelay" | "FlowChartAlternateProcess" | "FlowChartOffpageConnector" | "ActionButtonBlank" | "ActionButtonHome" | "ActionButtonHelp" | "ActionButtonInformation" | "ActionButtonForwardNext" | "ActionButtonBackPrevious" | "ActionButtonEnd" | "ActionButtonBeginning" | "ActionButtonReturn" | "ActionButtonDocument" | "ActionButtonSound" | "ActionButtonMovie" | "Gear6" | "Gear9" | "Funnel" | "MathPlus" | "MathMinus" | "MathMultiply" | "MathDivide" | "MathEqual" | "MathNotEqual" | "CornerTabs" | "SquareTabs" | "PlaqueTabs" | "ChartX" | "ChartStar" | "ChartPlus"
 - uid: excel.Excel.Interfaces.ShapeUpdateData.height
   summary: >-
-    表示形状的高度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -116,7 +116,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeUpdateData.left
   summary: >-
-    形状左侧距工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状左侧到工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -133,7 +133,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeUpdateData.lineFormat
   summary: >-
-    返回 shape 对象的线条格式。
+    返回此形状的线条格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -150,7 +150,7 @@ items:
       - excel.Excel.Interfaces.ShapeLineFormatUpdateData
 - uid: excel.Excel.Interfaces.ShapeUpdateData.lockAspectRatio
   summary: >-
-    表示纵横比是否锁定, 以布尔形式表示的形状。
+    指定是否锁定此形状的纵横比。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -167,7 +167,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeUpdateData.name
   summary: >-
-    代表形状的名称。
+    表示形状的名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -184,7 +184,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeUpdateData.placement
   summary: >-
-    代表 placment 的值, 该值代表对象附加到其下的单元格的方式。
+    表示对象附加到其下的单元格的方式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -201,7 +201,7 @@ items:
       - Excel.Placement | "TwoCell" | "OneCell" | "Absolute"
 - uid: excel.Excel.Interfaces.ShapeUpdateData.rotation
   summary: >-
-    表示形状的旋转角度 (以度为单位)。
+    表示形状的旋转度数。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -218,7 +218,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeUpdateData.top
   summary: >-
-    从形状的上边缘到工作表的顶端之间的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状的上边缘到工作表的上边缘之间的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -235,7 +235,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeUpdateData.visible
   summary: >-
-    表示指定形状的可见性 (以布尔值表示)。
+    表示此形状的可见性。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -252,7 +252,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeUpdateData.width
   summary: >-
-    表示形状的宽度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
