--- a/docs/docs-ref-autogen/excel/excel.interfaces.textframeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.textframeupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: cc4aebfdd699316d2971a3b01b9d1cdd7ca4ee7b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 4c6b8a17ed72975da48eba71630a422049865296
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113908"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575555"
 items:
 - uid: excel.Excel.Interfaces.TextFrameUpdateData
-  summary: 用于更新 TextFrame 对象上的数据的接口, 用于在 "TextFrame" 中使用 (<!-- -->{...}<!-- -->)".
+  summary: 一个用于更新 TextFrame 对象上的数据的接口, 可用于 "TextFrame (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.TextFrameUpdateData
   fullName: Excel.Interfaces.TextFrameUpdateData
   langs:
@@ -15,7 +15,7 @@ items:
   type: interface
   package: excel
   children:
-  - excel.Excel.Interfaces.TextFrameUpdateData.autoSize
+  - excel.Excel.Interfaces.TextFrameUpdateData.autoSizeSetting
   - excel.Excel.Interfaces.TextFrameUpdateData.bottomMargin
   - excel.Excel.Interfaces.TextFrameUpdateData.horizontalAlignment
   - excel.Excel.Interfaces.TextFrameUpdateData.horizontalOverflow
@@ -26,26 +26,26 @@ items:
   - excel.Excel.Interfaces.TextFrameUpdateData.topMargin
   - excel.Excel.Interfaces.TextFrameUpdateData.verticalAlignment
   - excel.Excel.Interfaces.TextFrameUpdateData.verticalOverflow
-- uid: excel.Excel.Interfaces.TextFrameUpdateData.autoSize
+- uid: excel.Excel.Interfaces.TextFrameUpdateData.autoSizeSetting
   summary: >-
-    获取或设置文本框架的自动调整大小设置。 可以将文本框架设置为自动调整文本大小以适合文本框架, 或自动调整文本框架大小以适合文本, 或者不自动调整大小。
+    获取或设置文本框架的自动调整大小设置。 可以将文本框架设置为自动调整文本框架的文本, 以自动将文本框架调整到文本, 或者不执行任何自动调整大小调整。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: autoSize
-  fullName: autoSize
+  name: autoSizeSetting
+  fullName: autoSizeSetting
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'autoSize?: Excel.ShapeAutoSize | "AutoSizeNone" | "AutoSizeTextToFitShape" | "AutoSizeShapeToFitText" | "AutoSizeMixed";'
+    content: 'autoSizeSetting?: Excel.ShapeAutoSize | "AutoSizeNone" | "AutoSizeTextToFitShape" | "AutoSizeShapeToFitText" | "AutoSizeMixed";'
     return:
       type:
       - Excel.ShapeAutoSize | "AutoSizeNone" | "AutoSizeTextToFitShape" | "AutoSizeShapeToFitText" | "AutoSizeMixed"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.bottomMargin
   summary: >-
-    表示文本框架的下边距 (以磅为单位)。
+    表示文本框的下边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -62,7 +62,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.horizontalAlignment
   summary: >-
-    表示文本框架的水平对齐方式。
+    表示文本框的水平对齐方式。 有关详细信息, 请参阅 ShapeTextHorizontalAlignment。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -73,13 +73,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'horizontalAlignment?: Excel.ShapeTextHorizontalAlignType | "Left" | "Center" | "Right" | "Justify" | "JustifyLow" | "Distributed" | "ThaiDistributed" | "ShapeTextHorizontalAlignType_MaxEnumIDs";'
+    content: 'horizontalAlignment?: Excel.ShapeTextHorizontalAlignment | "Left" | "Center" | "Right" | "Justify" | "JustifyLow" | "Distributed" | "ThaiDistributed";'
     return:
       type:
-      - Excel.ShapeTextHorizontalAlignType | "Left" | "Center" | "Right" | "Justify" | "JustifyLow" | "Distributed" | "ThaiDistributed" | "ShapeTextHorizontalAlignType_MaxEnumIDs"
+      - Excel.ShapeTextHorizontalAlignment | "Left" | "Center" | "Right" | "Justify" | "JustifyLow" | "Distributed" | "ThaiDistributed"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.horizontalOverflow
   summary: >-
-    表示文本框架的水平溢出类型。
+    表示文本框架的水平溢出行为。 有关详细信息, 请参阅 ShapeTextHorizontalOverflow。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -90,13 +90,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'horizontalOverflow?: Excel.ShapeTextHorzOverflowType | "Overflow" | "Clip" | "ShapeTextHorzOverflowType_MaxEnumIDs";'
+    content: 'horizontalOverflow?: Excel.ShapeTextHorizontalOverflow | "Overflow" | "Clip";'
     return:
       type:
-      - Excel.ShapeTextHorzOverflowType | "Overflow" | "Clip" | "ShapeTextHorzOverflowType_MaxEnumIDs"
+      - Excel.ShapeTextHorizontalOverflow | "Overflow" | "Clip"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.leftMargin
   summary: >-
-    表示文本框架的左边距 (以磅为单位)。
+    表示文本框的左边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -113,7 +113,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.orientation
   summary: >-
-    表示文本框架的文本方向。
+    表示文本框的文本方向。 有关详细信息, 请参阅 ShapeTextOrientation。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -124,13 +124,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'orientation?: Excel.ShapeTextOrientationType | "Horizontal" | "Vertical" | "Vertical270" | "WordArtVertical" | "EastAsianVertical" | "MongolianVertical" | "WordArtVerticalRTL" | "ShapeTextOrientationType_MaxEnumIDs";'
+    content: 'orientation?: Excel.ShapeTextOrientation | "Horizontal" | "Vertical" | "Vertical270" | "WordArtVertical" | "EastAsianVertical" | "MongolianVertical" | "WordArtVerticalRTL";'
     return:
       type:
-      - Excel.ShapeTextOrientationType | "Horizontal" | "Vertical" | "Vertical270" | "WordArtVertical" | "EastAsianVertical" | "MongolianVertical" | "WordArtVerticalRTL" | "ShapeTextOrientationType_MaxEnumIDs"
+      - Excel.ShapeTextOrientation | "Horizontal" | "Vertical" | "Vertical270" | "WordArtVertical" | "EastAsianVertical" | "MongolianVertical" | "WordArtVerticalRTL"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.readingOrder
   summary: >-
-    表示文本框架的阅读顺序: RTL 或 LTR。
+    表示文本框架的阅读顺序, 可以从左到右或从右到左。 有关详细信息, 请参阅 ShapeTextReadingOrder。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -141,13 +141,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'readingOrder?: Excel.ShapeTextReadingOrder | "LTR" | "RTL";'
+    content: 'readingOrder?: Excel.ShapeTextReadingOrder | "LeftToRight" | "RightToLeft";'
     return:
       type:
-      - Excel.ShapeTextReadingOrder | "LTR" | "RTL"
+      - Excel.ShapeTextReadingOrder | "LeftToRight" | "RightToLeft"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.rightMargin
   summary: >-
-    表示文本框架的右边距 (以磅为单位)。
+    表示文本框的右边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -164,7 +164,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.topMargin
   summary: >-
-    代表文本框架的上边距 (以磅为单位)。
+    表示文本框的上边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -181,7 +181,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.verticalAlignment
   summary: >-
-    表示文本框架的垂直对齐方式。
+    表示文本框的垂直对齐方式。 有关详细信息, 请参阅 ShapeTextVerticalAlignment。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -192,13 +192,13 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'verticalAlignment?: Excel.ShapeTextVerticalAlignType | "Top" | "Middle" | "Bottom" | "Justified" | "Distributed" | "ShapeTextVerticalAlignType_MaxEnumIDs";'
+    content: 'verticalAlignment?: Excel.ShapeTextVerticalAlignment | "Top" | "Middle" | "Bottom" | "Justified" | "Distributed";'
     return:
       type:
-      - Excel.ShapeTextVerticalAlignType | "Top" | "Middle" | "Bottom" | "Justified" | "Distributed" | "ShapeTextVerticalAlignType_MaxEnumIDs"
+      - Excel.ShapeTextVerticalAlignment | "Top" | "Middle" | "Bottom" | "Justified" | "Distributed"
 - uid: excel.Excel.Interfaces.TextFrameUpdateData.verticalOverflow
   summary: >-
-    表示文本框架的垂直溢出类型。
+    表示文本框架的垂直溢出行为。 有关详细信息, 请参阅 ShapeTextVerticalOverflow。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -209,7 +209,7 @@ items:
   - typeScript
   type: property
   syntax:
-    content: 'verticalOverflow?: Excel.ShapeTextVertOverflowType | "Overflow" | "Ellipsis" | "Clip" | "ShapeTextVertOverflowType_MaxEnumIDs";'
+    content: 'verticalOverflow?: Excel.ShapeTextVerticalOverflow | "Overflow" | "Ellipsis" | "Clip";'
     return:
       type:
-      - Excel.ShapeTextVertOverflowType | "Overflow" | "Ellipsis" | "Clip" | "ShapeTextVertOverflowType_MaxEnumIDs"
+      - Excel.ShapeTextVerticalOverflow | "Overflow" | "Ellipsis" | "Clip"
