--- a/docs/docs-ref-autogen/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.workbookloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6b861a758d83e53ef89f1cf5c03b963fbd3169d7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f5f1ec00eda1be7397ef82c6dbc2ec1345fa5ea2
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30093264"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575779"
 items:
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions
   summary: >-
-    工作簿是顶级对象，它包含相关 workbook 对象，例如工作表、表、范围等。
+    Workbook 是顶级对象，包含相关 Workbook 对象，如工作表、表、区域等。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -63,7 +63,7 @@ items:
       - excel.Excel.Interfaces.ApplicationLoadOptions
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.autoSave
   summary: >-
-    如此如果工作簿处于自动保存模式。
+    指定工作簿是否处于自动保存模式。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -96,7 +96,7 @@ items:
       - excel.Excel.Interfaces.BindingCollectionLoadOptions
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.calculationEngineVersion
   summary: >-
-    返回有关 Excel 计算引擎版本的数字。 只读。
+    返回有关 Excel 计算引擎的版本号。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -113,7 +113,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.chartDataPointTrack
   summary: >-
-    如此如果工作簿中的所有图表都跟踪它们所附加到的实际数据点。 假如果图表跟踪数据点的索引。
+    如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -130,7 +130,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.isDirty
   summary: >-
-    如此如果指定的工作簿自上次保存以来未发生任何更改。 如果要关闭某个已更改的工作簿，但又不想保存它或者不想出现保存提示，则可将此属性设为 True。
+    指定自上次保存工作簿后是否进行过更改。 如果要关闭修改过的工作簿而不保存或提示保存它, 则可以将该属性设置为 true。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -163,7 +163,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.previouslySaved
   summary: >-
-    如此如果工作簿曾经保存在本地或联机。
+    指定是否曾在本地或联机保存工作簿。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -228,7 +228,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.tables
   summary: >-
-    代表与工作簿相关联的表格的集合。
+    表示与工作簿关联的表的集合。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -244,7 +244,7 @@ items:
       - excel.Excel.Interfaces.TableCollectionLoadOptions
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.use1904DateSystem
   summary: >-
-    如此如果工作簿使用1904日期系统。
+    如果工作簿使用 1904 日期系统，则为 True。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -261,7 +261,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookLoadOptions.usePrecisionAsDisplayed
   summary: >-
-    如此如果工作簿中的计算将仅使用显示的数字的精度完成。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
+    如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
