--- a/docs/docs-ref-autogen/excel/excel.shapeactivatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapeactivatedeventargs.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 88d6654df35897ebaec631e560556af74d438bcb
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ded85681b1c49741a24a87c3e279992f61e53e86
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115833"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575933"
 items:
 - uid: excel.Excel.ShapeActivatedEventArgs
   summary: >-
@@ -42,7 +42,7 @@ items:
       - string
 - uid: excel.Excel.ShapeActivatedEventArgs.type
   summary: >-
-    获取事件的类型。 有关详细信息, 请参阅 "Excel. 事件"。
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -59,7 +59,7 @@ items:
       - "\"ShapeActivated\""
 - uid: excel.Excel.ShapeActivatedEventArgs.worksheetId
   summary: >-
-    获取在其中激活形状的工作表的 id。
+    获取其中的形状已启用的工作表的 ID。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
