--- a/docs/docs-ref-autogen/excel/excel.shapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapecollection.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f7c626d3fa1568ffc1251822b061802fb76cd9d4
-ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
+ms.openlocfilehash: 8789f234309a12841e63a5fd503fdcad29a2230d
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/06/2019
-ms.locfileid: "30413831"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575786"
 items:
 - uid: excel.Excel.ShapeCollection
   summary: >-
-    代表工作表中的所有形状。
+    代表工作表中所有形状的集合。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -28,7 +28,7 @@ items:
   - excel.Excel.ShapeCollection.addImage
   - excel.Excel.ShapeCollection.addLine
   - excel.Excel.ShapeCollection.addLine_1
-  - excel.Excel.ShapeCollection.addSVG
+  - excel.Excel.ShapeCollection.addSvg
   - excel.Excel.ShapeCollection.addTextBox
   - excel.Excel.ShapeCollection.context
   - excel.Excel.ShapeCollection.getCount
@@ -41,7 +41,7 @@ items:
   - excel.Excel.ShapeCollection.toJSON
 - uid: excel.Excel.ShapeCollection.addGeometricShape
   summary: >-
-    将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
+    向工作表中添加一个几何形状。 返回一个 Shape 对象，该对象代表新图形。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -59,12 +59,12 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.addGeometricShape(Excel.GeometricShapeType.hexagon);\n    shape.left = 5;\n    shape.top = 5;\n    shape.height = 175;\n    shape.width = 200;\n    await context.sync();\n});\n```"
     parameters:
     - id: geometricShapeType
-      description: 表示形状的几何类型。 有关详细信息, 请参阅 GeometricShapeType。
+      description: 表示几何形状的类型。 有关详细信息, 请参阅 GeometricShapeType。
       type:
       - excel.Excel.GeometricShapeType
 - uid: excel.Excel.ShapeCollection.addGeometricShape_1
   summary: >-
-    将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
+    向工作表中添加一个几何形状。 返回一个 Shape 对象，该对象代表新图形。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -82,12 +82,12 @@ items:
       description: ''
     parameters:
     - id: geometricShapeTypeString
-      description: 表示形状的几何类型。 有关详细信息, 请参阅 GeometricShapeType。
+      description: 表示几何形状的类型。 有关详细信息, 请参阅 GeometricShapeType。
       type:
       - "\"LineInverse\" | \"Triangle\" | \"RightTriangle\" | \"Rectangle\" | \"Diamond\" | \"Parallelogram\" | \"Trapezoid\" | \"NonIsoscelesTrapezoid\" | \"Pentagon\" | \"Hexagon\" | \"Heptagon\" | \"Octagon\" | \"Decagon\" | \"Dodecagon\" | \"Star4\" | \"Star5\" | \"Star6\" | \"Star7\" | \"Star8\" | \"Star10\" | \"Star12\" | \"Star16\" | \"Star24\" | \"Star32\" | \"RoundRectangle\" | \"Round1Rectangle\" | \"Round2SameRectangle\" | \"Round2DiagonalRectangle\" | \"SnipRoundRectangle\" | \"Snip1Rectangle\" | \"Snip2SameRectangle\" | \"Snip2DiagonalRectangle\" | \"Plaque\" | \"Ellipse\" | \"Teardrop\" | \"HomePlate\" | \"Chevron\" | \"PieWedge\" | \"Pie\" | \"BlockArc\" | \"Donut\" | \"NoSmoking\" | \"RightArrow\" | \"LeftArrow\" | \"UpArrow\" | \"DownArrow\" | \"StripedRightArrow\" | \"NotchedRightArrow\" | \"BentUpArrow\" | \"LeftRightArrow\" | \"UpDownArrow\" | \"LeftUpArrow\" | \"LeftRightUpArrow\" | \"QuadArrow\" | \"LeftArrowCallout\" | \"RightArrowCallout\" | \"UpArrowCallout\" | \"DownArrowCallout\" | \"LeftRightArrowCallout\" | \"UpDownArrowCallout\" | \"QuadArrowCallout\" | \"BentArrow\" | \"UturnArrow\" | \"CircularArrow\" | \"LeftCircularArrow\" | \"LeftRightCircularArrow\" | \"CurvedRightArrow\" | \"CurvedLeftArrow\" | \"CurvedUpArrow\" | \"CurvedDownArrow\" | \"SwooshArrow\" | \"Cube\" | \"Can\" | \"LightningBolt\" | \"Heart\" | \"Sun\" | \"Moon\" | \"SmileyFace\" | \"IrregularSeal1\" | \"IrregularSeal2\" | \"FoldedCorner\" | \"Bevel\" | \"Frame\" | \"HalfFrame\" | \"Corner\" | \"DiagonalStripe\" | \"Chord\" | \"Arc\" | \"LeftBracket\" | \"RightBracket\" | \"LeftBrace\" | \"RightBrace\" | \"BracketPair\" | \"BracePair\" | \"Callout1\" | \"Callout2\" | \"Callout3\" | \"AccentCallout1\" | \"AccentCallout2\" | \"AccentCallout3\" | \"BorderCallout1\" | \"BorderCallout2\" | \"BorderCallout3\" | \"AccentBorderCallout1\" | \"AccentBorderCallout2\" | \"AccentBorderCallout3\" | \"WedgeRectCallout\" | \"WedgeRRectCallout\" | \"WedgeEllipseCallout\" | \"CloudCallout\" | \"Cloud\" | \"Ribbon\" | \"Ribbon2\" | \"EllipseRibbon\" | \"EllipseRibbon2\" | \"LeftRightRibbon\" | \"VerticalScroll\" | \"HorizontalScroll\" | \"Wave\" | \"DoubleWave\" | \"Plus\" | \"FlowChartProcess\" | \"FlowChartDecision\" | \"FlowChartInputOutput\" | \"FlowChartPredefinedProcess\" | \"FlowChartInternalStorage\" | \"FlowChartDocument\" | \"FlowChartMultidocument\" | \"FlowChartTerminator\" | \"FlowChartPreparation\" | \"FlowChartManualInput\" | \"FlowChartManualOperation\" | \"FlowChartConnector\" | \"FlowChartPunchedCard\" | \"FlowChartPunchedTape\" | \"FlowChartSummingJunction\" | \"FlowChartOr\" | \"FlowChartCollate\" | \"FlowChartSort\" | \"FlowChartExtract\" | \"FlowChartMerge\" | \"FlowChartOfflineStorage\" | \"FlowChartOnlineStorage\" | \"FlowChartMagneticTape\" | \"FlowChartMagneticDisk\" | \"FlowChartMagneticDrum\" | \"FlowChartDisplay\" | \"FlowChartDelay\" | \"FlowChartAlternateProcess\" | \"FlowChartOffpageConnector\" | \"ActionButtonBlank\" | \"ActionButtonHome\" | \"ActionButtonHelp\" | \"ActionButtonInformation\" | \"ActionButtonForwardNext\" | \"ActionButtonBackPrevious\" | \"ActionButtonEnd\" | \"ActionButtonBeginning\" | \"ActionButtonReturn\" | \"ActionButtonDocument\" | \"ActionButtonSound\" | \"ActionButtonMovie\" | \"Gear6\" | \"Gear9\" | \"Funnel\" | \"MathPlus\" | \"MathMinus\" | \"MathMultiply\" | \"MathDivide\" | \"MathEqual\" | \"MathNotEqual\" | \"CornerTabs\" | \"SquareTabs\" | \"PlaqueTabs\" | \"ChartX\" | \"ChartStar\" | \"ChartPlus\""
 - uid: excel.Excel.ShapeCollection.addGroup
   summary: >-
-    在工作表中对形状的子集进行分组。 返回表示新形状组的 Shape 对象。
+    将此集合的工作表中的一部分形状组合在一起。 返回表示新形状组的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -102,7 +102,7 @@ items:
     return:
       type:
       - excel.Excel.Shape
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const square = sheet.shapes.getItem(\"Square\");\n    const pentagon = sheet.shapes.getItem(\"Pentagon\");\n    const octagon = sheet.shapes.getItem(\"Octagon\");\n\n    const shapeGroup = sheet.shapes.addGroup([square, pentagon, octagon]);\n    shapeGroup.name = \"Group\";\n    console.log(\"Shapes grouped\");\n\n    await context.sync();\n});\n```"
     parameters:
     - id: values
       description: 形状 ID 或 shape 对象的数组。
@@ -110,7 +110,7 @@ items:
       - Array<string | Shape>
 - uid: excel.Excel.ShapeCollection.addImage
   summary: >-
-    从 base64 字符串创建图像并将其添加到工作表。 返回一个 Shape 对象，该对象代表新图像。
+    从 base64 编码的字符串创建图像, 并将其添加到工作表中。 返回代表新图像的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -128,7 +128,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nconst myFile = <HTMLInputElement>document.getElementById(\"selectedFile\");\nconst reader = new FileReader();\n\nreader.onload = (event) => {\n    Excel.run((context) => {\n        const startIndex = (<string>(<FileReader>event.target).result).indexOf(\"base64,\");\n        const mybase64 = (<string>(<FileReader>event.target).result).substr(startIndex + 7);\n        const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n        const image = sheet.shapes.addImage(mybase64);\n        image.name = \"Image\";\n        return context.sync();\n    });\n};\n\n// Read in the image file as a data URL.\nreader.readAsDataURL(myFile.files[0]);\n```"
     parameters:
     - id: base64ImageString
-      description: 以 JPEG 或 PNG 格式的 base64 编码的图像。
+      description: 以 JPEG 或 PNG 格式表示图像的 base64 编码字符串。
       type:
       - string
 - uid: excel.Excel.ShapeCollection.addLine
@@ -151,19 +151,19 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const shapes = context.workbook.worksheets.getItem(\"Shapes\").shapes;\n    const line = shapes.addLine(200, 50, 300, 150, Excel.ConnectorType.straight);\n    line.name = \"StraightLine\";\n    await context.sync();\n});\n```"
     parameters:
     - id: startLeft
-      description: 从行的起始位置到工作表左侧的距离 (以磅为单位)。
+      description: 从行的起点到工作表的左侧之间的距离 (以磅为单位)。
       type:
       - number
     - id: startTop
-      description: 从行的起始位置到工作表顶部的距离 (以磅为单位)。
+      description: 从行的起始位置到工作表的顶端之间的距离 (以磅为单位)。
       type:
       - number
     - id: endLeft
-      description: 从工作表左侧的行的末尾到左侧的距离 (以磅为单位)。
+      description: 从工作表左侧线的末尾到的距离 (以磅为单位)。
       type:
       - number
     - id: endTop
-      description: 从行的结束位置到工作表顶部的距离 (以磅为单位)。
+      description: 从行的末尾到工作表的顶端的距离 (以磅为单位)。
       type:
       - number
     - id: connectorType
@@ -190,51 +190,51 @@ items:
       description: ''
     parameters:
     - id: startLeft
-      description: 从行的起始位置到工作表左侧的距离 (以磅为单位)。
+      description: 从行的起点到工作表的左侧之间的距离 (以磅为单位)。
       type:
       - number
     - id: startTop
-      description: 从行的起始位置到工作表顶部的距离 (以磅为单位)。
+      description: 从行的起始位置到工作表的顶端之间的距离 (以磅为单位)。
       type:
       - number
     - id: endLeft
-      description: 从工作表左侧的行的末尾到左侧的距离 (以磅为单位)。
+      description: 从工作表左侧线的末尾到的距离 (以磅为单位)。
       type:
       - number
     - id: endTop
-      description: 从行的结束位置到工作表顶部的距离 (以磅为单位)。
+      description: 从行的末尾到工作表的顶端的距离 (以磅为单位)。
       type:
       - number
     - id: connectorTypeString
       description: 代表连接器类型。 有关详细信息, 请参阅 ConnectorType。
       type:
       - "\"Straight\" | \"Elbow\" | \"Curve\""
-- uid: excel.Excel.ShapeCollection.addSVG
+- uid: excel.Excel.ShapeCollection.addSvg
   summary: >-
-    从 XML 字符串创建 SVG 并将其添加到工作表。 返回表示新图像的 Shape 对象。
+    从 XML 字符串创建可缩放的矢量图形 (SVG), 并将其添加到工作表中。 返回一个 Shape 对象, 该对象代表新图像。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: addSVG(xmlImageString)
-  fullName: addSVG(xmlImageString)
+  name: addSvg(xml)
+  fullName: addSvg(xml)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'addSVG(xmlImageString: string): Excel.Shape;'
+    content: 'addSvg(xml: string): Excel.Shape;'
     return:
       type:
       - excel.Excel.Shape
       description: ''
     parameters:
-    - id: xmlImageString
+    - id: xml
       description: 一个代表 SVG 的 XML 字符串。
       type:
       - string
 - uid: excel.Excel.ShapeCollection.addTextBox
   summary: >-
-    通过告诉文本内容，将文本框添加到工作表。 返回表示新文本框的 Shape 对象。
+    向工作表添加一个文本框, 其中包含提供的文本作为内容。 返回表示新文本框的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -311,7 +311,7 @@ items:
       - string
 - uid: excel.Excel.ShapeCollection.getItemAt
   summary: >-
-    根据其在集合中的位置获取形状。
+    使用其在集合中的位置获取形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -329,7 +329,7 @@ items:
       description: ''
     parameters:
     - id: index
-      description: 要检索的对象的索引值。 从零开始编制索引。
+      description: 要检索的形状的从零开始的索引。
       type:
       - number
 - uid: excel.Excel.ShapeCollection.items
@@ -413,7 +413,7 @@ items:
       type:
       - office.OfficeExtension.LoadOption
 - uid: excel.Excel.ShapeCollection.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)虽然原始`Excel.ShapeCollection`对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.ShapeCollectionData` <!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ShapeCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
