--- a/docs/docs-ref-autogen/excel/excel.shapedeactivatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapedeactivatedeventargs.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 26ae08f1f3877635c292c0dfc68a5669779ee756
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 90eeb4874bc29caae15c1bdb3d0c6f558c0da390
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117156"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575870"
 items:
 - uid: excel.Excel.ShapeDeactivatedEventArgs
   summary: >-
@@ -25,7 +25,7 @@ items:
   - excel.Excel.ShapeDeactivatedEventArgs.worksheetId
 - uid: excel.Excel.ShapeDeactivatedEventArgs.shapeId
   summary: >-
-    获取已停用形状的 id。
+    获取形状停用的形状的 id。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -42,7 +42,7 @@ items:
       - string
 - uid: excel.Excel.ShapeDeactivatedEventArgs.type
   summary: >-
-    获取事件的类型。 有关详细信息, 请参阅 "Excel. 事件"。
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -59,7 +59,7 @@ items:
       - "\"ShapeDeactivated\""
 - uid: excel.Excel.ShapeDeactivatedEventArgs.worksheetId
   summary: >-
-    获取已停用形状的工作表的 id。
+    获取其中的形状已停用的工作表的 ID。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
