--- a/docs/docs-ref-autogen/excel/excel.shapefilltype.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapefilltype.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fb2b558e122fdcbe31e6134909f7e2d719f04f46
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 51700ca333a82e7e3cc5495a2174385025021d50
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105207"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575716"
 items:
 - uid: excel.Excel.ShapeFillType
-  summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+  summary: >-
+    指定形状的填充类型。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
   name: Excel.ShapeFillType
   fullName: Excel.ShapeFillType
@@ -23,6 +27,7 @@ items:
   - excel.Excel.ShapeFillType.pictureAndTexture
   - excel.Excel.ShapeFillType.solid
 - uid: excel.Excel.ShapeFillType.gradient
+  summary: 渐变填充。
   isPreview: true
   name: gradient
   fullName: gradient
@@ -31,6 +36,7 @@ items:
   type: field
   numericValue: "\"Gradient\""
 - uid: excel.Excel.ShapeFillType.mixed
+  summary: 混和填充。
   isPreview: true
   name: mixed
   fullName: mixed
@@ -39,6 +45,7 @@ items:
   type: field
   numericValue: "\"Mixed\""
 - uid: excel.Excel.ShapeFillType.noFill
+  summary: 无填充。
   isPreview: true
   name: noFill
   fullName: noFill
@@ -47,6 +54,7 @@ items:
   type: field
   numericValue: "\"NoFill\""
 - uid: excel.Excel.ShapeFillType.pattern
+  summary: 图案填充。
   isPreview: true
   name: pattern
   fullName: pattern
@@ -55,6 +63,7 @@ items:
   type: field
   numericValue: "\"Pattern\""
 - uid: excel.Excel.ShapeFillType.pictureAndTexture
+  summary: 图片和纹理填充。
   isPreview: true
   name: pictureAndTexture
   fullName: pictureAndTexture
@@ -63,6 +72,7 @@ items:
   type: field
   numericValue: "\"PictureAndTexture\""
 - uid: excel.Excel.ShapeFillType.solid
+  summary: 单色填充。
   isPreview: true
   name: solid
   fullName: solid
