--- a/docs/docs-ref-autogen/excel/excel.shapefont.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapefont.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bf2f3dd37c98b5f2a3fed3de5ea13bb3a5c76849
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 263fa303899f015d98c81c5646b641c2994d6316
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105151"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575625"
 items:
 - uid: excel.Excel.ShapeFont
   summary: >-
-    此对象表示形状中的 TextRange 的字体属性 (字体名称、字体大小、颜色等)。
+    代表形状的 TextRange 对象的字体属性, 如字体名称、字体大小和颜色。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -37,7 +37,7 @@ items:
   - excel.Excel.ShapeFont.underline
 - uid: excel.Excel.ShapeFont.bold
   summary: >-
-    表示字体的加粗状态。 返回 null TextRange 同时包含粗体和非粗体文本片段。
+    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -54,7 +54,7 @@ items:
       - boolean
 - uid: excel.Excel.ShapeFont.color
   summary: >-
-    文本颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。 如果 TextRange 包含具有不同颜色的文本片段, 则返回 null。
+    文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -100,7 +100,7 @@ items:
       type:
       - boolean
 - uid: excel.Excel.ShapeFont.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -130,7 +130,7 @@ items:
       type:
       - excel.Excel.Interfaces.ShapeFontLoadOptions
 - uid: excel.Excel.ShapeFont.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -149,7 +149,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.ShapeFont.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -169,7 +169,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.ShapeFont.name
   summary: >-
-    表示字体名称 (例如, "Calibri")。 如果文本为复杂文种或东亚语言, 则表示相应的字体名称;否则表示西文字体名称。
+    表示字体名称（例如“Calibri”）。 如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -233,7 +233,7 @@ items:
       - excel.Excel.ShapeFont
 - uid: excel.Excel.ShapeFont.size
   summary: >-
-    表示字体大小, 以磅为单位 (例如 11)。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
+    表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -249,7 +249,7 @@ items:
       type:
       - number
 - uid: excel.Excel.ShapeFont.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 ShapeFont 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.ShapeFontData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeFont 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeFontData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
@@ -264,7 +264,7 @@ items:
       description: ''
 - uid: excel.Excel.ShapeFont.underline
   summary: >-
-    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息, 请参阅 ShapeFontUnderlineStyle。
+    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
