--- a/docs/docs-ref-autogen/excel/excel.shapelineformat.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelineformat.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 88cf92cb3114cb5e2d15d2cd244e1825d832a96a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f5aad3ce9378c82085bc32fd77c71fdfb0d1ddf3
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114370"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575646"
 items:
 - uid: excel.Excel.ShapeLineFormat
   summary: >-
-    代表 shape 对象的线条格式。 对于 "图片" 和 "几何" 形状, 线条格式代表 shape 对象的边框。
+    代表 shape 对象的线条格式。 对于图像和几何形状, 线条格式表示形状的边框。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -67,7 +67,7 @@ items:
       - RequestContext
 - uid: excel.Excel.ShapeLineFormat.dashStyle
   summary: >-
-    表示形状的线条样式。 当行不可见或具有混合的短划线样式属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或不一致的虚线样式, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -83,7 +83,7 @@ items:
       type:
       - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
 - uid: excel.Excel.ShapeLineFormat.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -113,7 +113,7 @@ items:
       type:
       - excel.Excel.Interfaces.ShapeLineFormatLoadOptions
 - uid: excel.Excel.ShapeLineFormat.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -132,7 +132,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.ShapeLineFormat.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -199,7 +199,7 @@ items:
       - excel.Excel.ShapeLineFormat
 - uid: excel.Excel.ShapeLineFormat.style
   summary: >-
-    表示形状对象的线条样式。 当行不可见或具有混合的行可见属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或样式不一致, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -215,7 +215,7 @@ items:
       type:
       - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
 - uid: excel.Excel.ShapeLineFormat.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 ShapeLineFormat 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.ShapeLineFormatData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeLineFormat 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeLineFormatData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
@@ -230,7 +230,7 @@ items:
       description: ''
 - uid: excel.Excel.ShapeLineFormat.transparency
   summary: >-
-    表示指定线条的透明度为 0.0 (不透明) 到 1.0 (清除) 的值的度数。 如果形状具有混和的线条透明度属性 (例如, shape 的 group 类型)), 则返回 null。
+    将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 如果形状具有不一致的透明胶片, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -247,7 +247,7 @@ items:
       - number
 - uid: excel.Excel.ShapeLineFormat.visible
   summary: >-
-    表示是否显示 shape 元素的线条格式。 当形状具有混合的线条可见属性 (例如, shape 的 group 类型) 时, 返回 null。
+    表示 shape 元素的行格式是否可见。 如果形状具有不一致的 visibilities, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -264,7 +264,7 @@ items:
       - boolean
 - uid: excel.Excel.ShapeLineFormat.weight
   summary: >-
-    表示线条的重量, 以磅为单位。 当行不可见或具有混合的线条粗细属性 (例如, 形状的组合类型) 时, 返回 null。
+    表示线条的粗细, 以磅为单位。 如果行不可见或线条粗细不一致, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
