--- a/docs/docs-ref-autogen/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheet.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8e825405e1f328ca931354e2d4138476887d2e8d
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: c01653f13dc4a6bf97747b8349a55a9068769571
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303240"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575954"
 items:
 - uid: excel.Excel.Worksheet
   summary: >-
-    Excel 工作表是由单元格组成的网格。它可以包含数据、表、图表等。
+    Excel 工作表是由单元格组成的网格。 它可以包含数据、表、图表等。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -95,7 +95,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (ctx) { \n    var wSheetName = 'Sheet1';\n    var worksheet = ctx.workbook.worksheets.getItem(wSheetName);\n    worksheet.activate();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.Worksheet.autoFilter
   summary: >-
-    代表工作表的自动筛选对象。 只读。
+    表示工作表的 AutoFilter 对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -134,7 +134,7 @@ items:
       - boolean
 - uid: excel.Excel.Worksheet.charts
   summary: >-
-    返回属于工作表的图表的集合。只读。
+    返回属于工作表的图表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -150,7 +150,7 @@ items:
       - excel.Excel.ChartCollection
 - uid: excel.Excel.Worksheet.comments
   summary: >-
-    返回工作表上的所有注释对象的集合。 只读。
+    返回工作表上的所有 Comments 对象的集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -231,7 +231,7 @@ items:
       - excel.Excel.Worksheet
 - uid: excel.Excel.Worksheet.delete
   summary: >-
-    从工作簿中删除工作表。 请注意, 如果工作表的可见性设置为 "VeryHidden", 则删除操作将失败, 并出现 GeneralException。
+    从工作簿中删除工作表。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -248,7 +248,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (ctx) { \n    var wSheetName = 'Sheet1';\n    var worksheet = ctx.workbook.worksheets.getItem(wSheetName);\n    worksheet.delete();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.Worksheet.enableCalculation
   summary: >-
-    获取或设置工作表的 enableCalculation 属性。 如此如果 Excel 根据需要重新计算工作表。 假如果 Excel 不重新计算工作表。
+    获取或设置工作表的 enableCalculation 属性。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -265,7 +265,7 @@ items:
       - boolean
 - uid: excel.Excel.Worksheet.findAll
   summary: >-
-    根据指定的条件查找给定字符串的所有匹配项, 并将它们作为 RangeAreas 对象返回, 由一个或多个矩形区域组成。
+    根据指定的条件查找给定字符串的所有匹配项，并将它们作为包含一个或多个矩形区域的 RangeAreas 对象返回。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -292,7 +292,7 @@ items:
       - excel.Excel.WorksheetSearchCriteria
 - uid: excel.Excel.Worksheet.findAllOrNullObject
   summary: >-
-    根据指定的条件查找给定字符串的所有匹配项, 并将它们作为 RangeAreas 对象返回, 由一个或多个矩形区域组成。
+    根据指定的条件查找给定字符串的所有匹配项，并将它们作为包含一个或多个矩形区域的 RangeAreas 对象返回。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -359,7 +359,7 @@ items:
       - excel.Excel.WorksheetFreezePanes
 - uid: excel.Excel.Worksheet.getCell
   summary: >-
-    根据行和列编号获取包含单个单元格的 range 对象。单元格可以位于父区域外部，只要其保持在工作表网格内即可。
+    根据行和列编号获取包含单个单元格的 range 对象。 单元格可以位于其父区域的边界之外, 但前提是它停留在工作表网格中。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -376,16 +376,16 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"A1:F8\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var cell = worksheet.getCell(0,0);\n    cell.load('address');\n    return ctx.sync().then(function() {\n        console.log(cell.address);\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
     parameters:
     - id: row
-      description: 要检索的单元格的行号。从零开始编制索引。
+      description: 要检索的单元格的行号。 从零开始编制索引。
       type:
       - number
     - id: column
-      description: 要检索的单元格的列号。从零开始编制索引。
+      description: 要检索的单元格的列号。 从零开始编制索引。
       type:
       - number
 - uid: excel.Excel.Worksheet.getNext
   summary: >-
-    获取该工作表之后的工作表。如果该工作表后没有工作表，此方法将引发错误。
+    获取此工作表的后面的工作表。 如果此方法后面没有任何工作表, 则此方法将引发错误。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -402,12 +402,12 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheets = context.workbook.worksheets;\n\n    // We don't want to include the default worksheet that was created\n    // when the workbook was created, so our \"firstSheet\" will be the one\n    // after the literal first. Note chaining of navigation methods.\n    const firstSheet = sheets.getFirst().getNext();\n    const lastSheet = sheets.getLast();\n    const firstTaxRateRange = firstSheet.getRange(\"B2\");\n    const lastTaxRateRange = lastSheet.getRange(\"B2\");\n\n    firstSheet.load(\"name\");\n    lastSheet.load(\"name\");\n    firstTaxRateRange.load(\"text\");\n    lastTaxRateRange.load(\"text\");\n\n    await context.sync();\n\n    let firstYear = firstSheet.name.substr(5, 4);\n    let lastYear = lastSheet.name.substr(5, 4);\n    console.log(`Tax Rate change from ${firstYear} to ${lastYear}`, `Tax rate for ${firstYear}: ${firstTaxRateRange.text[0][0]}\\nTax rate for ${lastYear}: ${lastTaxRateRange.text[0][0]}`)\n\n    await context.sync();\n});\n```"
     parameters:
     - id: visibleOnly
-      description: 可选。如果为 true，则仅考虑可见的工作表，跳过任意隐藏的工作表。
+      description: 可选。 如果为 true, 则只考虑可见的工作表, 跳过任何隐藏的工作表。
       type:
       - boolean
 - uid: excel.Excel.Worksheet.getNextOrNullObject
   summary: >-
-    获取该工作表之后的工作表。如果该工作表后没有工作表，此方法将返回 null 值。
+    获取此工作表的后面的工作表。 如果此方法后面没有任何工作表, 则此方法将返回一个 null 对象。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -424,12 +424,12 @@ items:
       description: ''
     parameters:
     - id: visibleOnly
-      description: 可选。如果为 true，则仅考虑可见的工作表，跳过任意隐藏的工作表。
+      description: 可选。 如果为 true, 则只考虑可见的工作表, 跳过任何隐藏的工作表。
       type:
       - boolean
 - uid: excel.Excel.Worksheet.getPrevious
   summary: >-
-    获取该工作表之前的工作表。如果该工作表前没有工作表，此方法将引发错误。
+    获取此项之前的工作表。 如果没有以前的工作表, 此方法将引发错误。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -446,12 +446,12 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheets = context.workbook.worksheets;\n    const currentSheet = sheets.getActiveWorksheet();\n    const previousYearSheet = currentSheet.getPrevious();\n    const currentTaxDueRange = currentSheet.getRange(\"C2\");\n    const previousTaxDueRange = previousYearSheet.getRange(\"C2\");\n\n    currentSheet.load(\"name\");\n    previousYearSheet.load(\"name\");\n    currentTaxDueRange.load(\"text\");\n    previousTaxDueRange.load(\"text\");\n\n    await context.sync();\n\n    let currentYear = currentSheet.name.substr(5, 4);\n    let previousYear = previousYearSheet.name.substr(5, 4);\n    console.log(\"Two Year Tax Due Comparison\", `Tax due for ${currentYear} was ${currentTaxDueRange.text[0][0]}\\nTax due for ${previousYear} was ${previousTaxDueRange.text[0][0]}`)\n\n    await context.sync();\n});\n```"
     parameters:
     - id: visibleOnly
-      description: 可选。如果为 true，则仅考虑可见的工作表，跳过任意隐藏的工作表。
+      description: 可选。 如果为 true, 则只考虑可见的工作表, 跳过任何隐藏的工作表。
       type:
       - boolean
 - uid: excel.Excel.Worksheet.getPreviousOrNullObject
   summary: >-
-    获取该工作表之前的工作表。如果该工作表前没有工作表，此方法将返回 null 值。
+    获取此项之前的工作表。 如果没有以前的工作表, 则此方法将返回一个空的 objet。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -468,7 +468,7 @@ items:
       description: ''
     parameters:
     - id: visibleOnly
-      description: 可选。如果为 true，则仅考虑可见的工作表，跳过任意隐藏的工作表。
+      description: 可选。 如果为 true, 则只考虑可见的工作表, 跳过任何隐藏的工作表。
       type:
       - boolean
 - uid: excel.Excel.Worksheet.getRange
@@ -490,7 +490,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// Below example uses range address to get the range object.\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"A1:F8\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    range.load('cellCount');\n    return ctx.sync().then(function() {\n        console.log(range.cellCount);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\n// Below example uses a named-range to get the range object.\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeName = 'MyRange';\n    var range = ctx.workbook.worksheets.getItem(sheetName).getRange(rangeName);\n    range.load('address');\n    return ctx.sync().then(function() {\n        console.log(range.address);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
     parameters:
     - id: address
-      description: '可选。 表示地址或范围名称的字符串。 例如, "A1: B2"。 如果未指定, 则返回整个工作表区域。'
+      description: '可选。 表示地址或范围名称的字符串。 例如, "A1: B2"。 如果未指定，则返回整个工作表区域。'
       type:
       - string
 - uid: excel.Excel.Worksheet.getRangeByIndexes
@@ -529,7 +529,7 @@ items:
       - number
 - uid: excel.Excel.Worksheet.getRanges
   summary: >-
-    获取 RangeAreas 对象, 该对象代表由地址或名称指定的一个或多个矩形区域块。
+    获取按地址或名称指定的 RangeAreas 对象，它表示一个或多个矩形区域块。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -552,7 +552,7 @@ items:
       - string
 - uid: excel.Excel.Worksheet.getUsedRange
   summary: >-
-    使用的范围是包含为其分配了值或格式的所有单元格的最小区域。 如果整个工作表为空, 则此函数将返回左上角单元格 (即, 它*不*会引发错误)。
+    使用的区域是包含分配了值或格式化的任何单元格的最小区域。 如果整个工作表为空, 则此函数将返回左上角单元格 (即, 它*不*会引发错误)。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -591,7 +591,7 @@ items:
       description: ''
     parameters:
     - id: valuesOnly
-      description: 可选。仅将有值的单元格视为已使用的单元格。
+      description: 可选。 仅将有值的单元格视为已使用的单元格。
       type:
       - boolean
 - uid: excel.Excel.Worksheet.horizontalPageBreaks
@@ -628,7 +628,7 @@ items:
       type:
       - string
 - uid: excel.Excel.Worksheet.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -657,7 +657,7 @@ items:
       type:
       - excel.Excel.Interfaces.WorksheetLoadOptions
 - uid: excel.Excel.Worksheet.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNames)
   fullName: load(propertyNames)
   langs:
@@ -675,7 +675,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.Worksheet.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
   langs:
@@ -710,7 +710,7 @@ items:
       - string
 - uid: excel.Excel.Worksheet.names
   summary: >-
-    一组范围限定到当前工作表的名称。只读。
+    一组范围限定到当前工作表的名称。 只读。
 
 
     \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -794,7 +794,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (context) {\n    var sheet = context.workbook.worksheets.getItem(\"Sample\");\n    sheet.onDeactivated.add(function (event) {\n        return Excel.run((context) => {\n            console.log(\"The deactivated worksheet is: \" + event.worksheetId);\n            return context.sync();\n        });\n    });\n    return context.sync();\n});\n```"
 - uid: excel.Excel.Worksheet.onFiltered
   summary: >-
-    在特定工作表上应用筛选时, 发生此事件。
+    在特定工作表上应用筛选器时发生。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -811,7 +811,7 @@ items:
       - OfficeExtension.EventHandlers<Excel.WorksheetFilteredEventArgs>
 - uid: excel.Excel.Worksheet.onFormatChanged
   summary: >-
-    当指定的工作表上的格式更改时发生。
+    在特定工作表上更改格式时发生。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -845,7 +845,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (context) {\n    var sheet = context.workbook.worksheets.getItem(\"Sample\");\n    sheet.onSelectionChanged.add(function (event) {\n        return Excel.run((context) => {\n            console.log(\"The selected range has changed to: \" + event.address);\n            return context.sync();\n        });\n    });\n    return context.sync();\n});\n```"
 - uid: excel.Excel.Worksheet.pageLayout
   summary: >-
-    获取工作表的页面布局对象。
+    获取工作表的 PageLayout 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -862,7 +862,7 @@ items:
       - excel.Excel.PageLayout
 - uid: excel.Excel.Worksheet.pivotTables
   summary: >-
-    一组属于 worksheet 的 PivotTable 对象。只读。
+    一组属于 worksheet 的 PivotTable 对象。 只读。
 
 
     \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -894,7 +894,7 @@ items:
       - number
 - uid: excel.Excel.Worksheet.protection
   summary: >-
-    返回表工作表的工作表保护对象。只读。
+    返回表工作表的工作表保护对象。 只读。
 
 
     \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -910,7 +910,7 @@ items:
       - excel.Excel.WorksheetProtection
 - uid: excel.Excel.Worksheet.replaceAll
   summary: >-
-    根据当前工作表中指定的条件查找和替换给定的字符串。
+    根据当前工作表中指定的条件查找并替换给定的字符串。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -1036,7 +1036,7 @@ items:
       - boolean
 - uid: excel.Excel.Worksheet.slicers
   summary: >-
-    返回作为工作表一部分的切片器的集合。 只读。
+    返回作为工作表一部分的切片器集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -1069,7 +1069,7 @@ items:
       - number
 - uid: excel.Excel.Worksheet.standardWidth
   summary: >-
-    返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于正文样式中一个字符的宽度。 对于比例字体，会使用字符 0（零）的宽度。
+    返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
 
     \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -1102,7 +1102,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const activeSheet = context.workbook.worksheets.getActiveWorksheet();\n    activeSheet.tabColor = \"#FF0000\";\n\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Worksheet.tables
   summary: >-
-    属于工作表的表的集合。只读。
+    属于工作表的表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -1117,7 +1117,7 @@ items:
       type:
       - excel.Excel.TableCollection
 - uid: excel.Excel.Worksheet.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始的 Excel 工作表对象是一个 API 对象, 但`toJSON`该方法返回一个简单的 JavaScript 对象 ( `Excel.Interfaces.WorksheetData` <!-- -->类型为), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 工作表对象是 API 对象, 但`toJSON`方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.WorksheetData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   name: toJSON()
   fullName: toJSON()
   langs:
