--- a/docs/docs-ref-autogen/excel/excel.arrowheadstyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.arrowheadstyle.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 23d283edf3fd8dc62032890ff7a060d7c6545b42
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: c643280a9cd3a99d5e75c90aa31acaaf93d6d545
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30307412"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575233"
 items:
-- uid: excel.Excel.ArrowHeadStyle
+- uid: excel.Excel.ArrowheadStyle
   summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
   isPreview: true
-  name: Excel.ArrowHeadStyle
-  fullName: Excel.ArrowHeadStyle
+  name: Excel.ArrowheadStyle
+  fullName: Excel.ArrowheadStyle
   langs:
   - typeScript
   type: enum
   package: excel
   children:
-  - excel.Excel.ArrowHeadStyle.diamond
-  - excel.Excel.ArrowHeadStyle.none
-  - excel.Excel.ArrowHeadStyle.open
-  - excel.Excel.ArrowHeadStyle.oval
-  - excel.Excel.ArrowHeadStyle.stealth
-  - excel.Excel.ArrowHeadStyle.triangle
-- uid: excel.Excel.ArrowHeadStyle.diamond
+  - excel.Excel.ArrowheadStyle.diamond
+  - excel.Excel.ArrowheadStyle.none
+  - excel.Excel.ArrowheadStyle.open
+  - excel.Excel.ArrowheadStyle.oval
+  - excel.Excel.ArrowheadStyle.stealth
+  - excel.Excel.ArrowheadStyle.triangle
+- uid: excel.Excel.ArrowheadStyle.diamond
   isPreview: true
   name: diamond
   fullName: diamond
@@ -30,7 +30,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Diamond\""
-- uid: excel.Excel.ArrowHeadStyle.none
+- uid: excel.Excel.ArrowheadStyle.none
   isPreview: true
   name: none
   fullName: none
@@ -38,7 +38,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"None\""
-- uid: excel.Excel.ArrowHeadStyle.open
+- uid: excel.Excel.ArrowheadStyle.open
   isPreview: true
   name: open
   fullName: open
@@ -46,7 +46,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Open\""
-- uid: excel.Excel.ArrowHeadStyle.oval
+- uid: excel.Excel.ArrowheadStyle.oval
   isPreview: true
   name: oval
   fullName: oval
@@ -54,7 +54,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Oval\""
-- uid: excel.Excel.ArrowHeadStyle.stealth
+- uid: excel.Excel.ArrowheadStyle.stealth
   isPreview: true
   name: stealth
   fullName: stealth
@@ -62,7 +62,7 @@ items:
   - typeScript
   type: field
   numericValue: "\"Stealth\""
-- uid: excel.Excel.ArrowHeadStyle.triangle
+- uid: excel.Excel.ArrowheadStyle.triangle
   isPreview: true
   name: triangle
   fullName: triangle
