--- a/docs/docs-ref-autogen/excel/excel.commentreply.yml
+++ b/docs/docs-ref-autogen/excel/excel.commentreply.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f1d7f3ff66747c5e9c3868a3ee8073e953b26df2
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0b885f9b2c3e1a2f45639b960dd8ce7ae3d3aab7
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111514"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575604"
 items:
 - uid: excel.Excel.CommentReply
   summary: >-
@@ -22,9 +22,13 @@ items:
   - office.OfficeExtension.ClientObject
   package: excel
   children:
+  - excel.Excel.CommentReply.authorEmail
+  - excel.Excel.CommentReply.authorName
   - excel.Excel.CommentReply.content
   - excel.Excel.CommentReply.context
+  - excel.Excel.CommentReply.creationDate
   - excel.Excel.CommentReply.delete
+  - excel.Excel.CommentReply.getLocation
   - excel.Excel.CommentReply.getParentComment
   - excel.Excel.CommentReply.id
   - excel.Excel.CommentReply.isParent
@@ -34,9 +38,43 @@ items:
   - excel.Excel.CommentReply.set
   - excel.Excel.CommentReply.set_1
   - excel.Excel.CommentReply.toJSON
+- uid: excel.Excel.CommentReply.authorEmail
+  summary: >-
+    获取批注答复的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly authorEmail: string;'
+    return:
+      type:
+      - string
+- uid: excel.Excel.CommentReply.authorName
+  summary: >-
+    获取批注答复的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly authorName: string;'
+    return:
+      type:
+      - string
 - uid: excel.Excel.CommentReply.content
   summary: >-
-    获取/设置内容。
+    获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -64,9 +102,26 @@ items:
     return:
       type:
       - RequestContext
+- uid: excel.Excel.CommentReply.creationDate
+  summary: >-
+    获取批注答复的创建时间。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly creationDate: Date;'
+    return:
+      type:
+      - Date
 - uid: excel.Excel.CommentReply.delete
   summary: >-
-    删除批注答复。
+    删除批注回复。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -82,9 +137,27 @@ items:
       type:
       - void
       description: ''
+- uid: excel.Excel.CommentReply.getLocation
+  summary: >-
+    获取批注答复的位置。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: getLocation()
+  fullName: getLocation()
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'getLocation(): Excel.Range;'
+    return:
+      type:
+      - excel.Excel.Range
+      description: ''
 - uid: excel.Excel.CommentReply.getParentComment
   summary: >-
-    获取此回复的父注释。
+    获取此回复的父批注。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -102,7 +175,7 @@ items:
       description: ''
 - uid: excel.Excel.CommentReply.id
   summary: >-
-    表示批注答复标识符。 只读。
+    表示批注回复标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -119,7 +192,7 @@ items:
       - string
 - uid: excel.Excel.CommentReply.isParent
   summary: >-
-    表示它是注释线程还是答复。 在此处始终返回 false。 只读。
+    表示它是批注线程还是回复。 在此处始终返回 False。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -135,7 +208,7 @@ items:
       type:
       - boolean
 - uid: excel.Excel.CommentReply.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -165,7 +238,7 @@ items:
       type:
       - excel.Excel.Interfaces.CommentReplyLoadOptions
 - uid: excel.Excel.CommentReply.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -184,7 +257,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.CommentReply.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -250,7 +323,7 @@ items:
       type:
       - excel.Excel.CommentReply
 - uid: excel.Excel.CommentReply.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 CommentReply 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.CommentReplyData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 CommentReply 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.CommentReplyData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
