--- a/docs/docs-ref-autogen/excel/excel.geometricshape.yml
+++ b/docs/docs-ref-autogen/excel/excel.geometricshape.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 65fd258fa2442fdeb2c8240188393d4e466a4049
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 46a72abc0bc228845244ddd4f1cb7cdd3e094ee3
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107363"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575702"
 items:
 - uid: excel.Excel.GeometricShape
   summary: >-
-    代表工作表中的一个几何形状对象。 几何形状可以是 Excel 中的线条、矩形、块箭头、公式、流程图、开始、横幅、标注或基本形状。
+    代表工作表中的几何形状。 在 Excel 中, 几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -44,7 +44,7 @@ items:
       - RequestContext
 - uid: excel.Excel.GeometricShape.id
   summary: >-
-    代表形状标识符。 只读。
+    返回形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -60,7 +60,7 @@ items:
       type:
       - string
 - uid: excel.Excel.GeometricShape.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -90,7 +90,7 @@ items:
       type:
       - excel.Excel.Interfaces.GeometricShapeLoadOptions
 - uid: excel.Excel.GeometricShape.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -109,7 +109,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.GeometricShape.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -145,7 +145,7 @@ items:
       type:
       - excel.Excel.Shape
 - uid: excel.Excel.GeometricShape.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 GeometricShape 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.GeometricShapeData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 GeometricShape 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.GeometricShapeData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
