--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a6cd21131f41f5a920d9af6481130b29df8c2ea2
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: e95a4a9c7e907b03cf5288ee2c278de73773e66c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112137"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575534"
 items:
 - uid: excel.Excel.Interfaces.CommentData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -15,13 +15,50 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.CommentData.authorEmail
+  - excel.Excel.Interfaces.CommentData.authorName
   - excel.Excel.Interfaces.CommentData.content
+  - excel.Excel.Interfaces.CommentData.creationDate
   - excel.Excel.Interfaces.CommentData.id
   - excel.Excel.Interfaces.CommentData.isParent
   - excel.Excel.Interfaces.CommentData.replies
+- uid: excel.Excel.Interfaces.CommentData.authorEmail
+  summary: >-
+    获取评论的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: string;'
+    return:
+      type:
+      - string
+- uid: excel.Excel.Interfaces.CommentData.authorName
+  summary: >-
+    获取批注的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: string;'
+    return:
+      type:
+      - string
 - uid: excel.Excel.Interfaces.CommentData.content
   summary: >-
-    获取/设置内容。
+    获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -36,9 +73,26 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.CommentData.creationDate
+  summary: >-
+    获取注释的创建时间。 如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: Date;'
+    return:
+      type:
+      - Date
 - uid: excel.Excel.Interfaces.CommentData.id
   summary: >-
-    表示注释标识符。 只读。
+    表示批注标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -55,7 +109,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.CommentData.isParent
   summary: >-
-    表示它是注释线程还是答复。 在此处始终返回 true。 只读。
+    表示它是批注线程还是回复。 在此处始终返回 True。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -72,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentData.replies
   summary: >-
-    代表与注释关联的答复对象的集合。 只读。
+    表示与批注关联的回复对象的集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
