--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 01b70bb88d8dfb2e6c658cf64bac627d31666157
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 8668c4cf3e1e0bdc81bf18cac7053097725c9410
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117254"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575730"
 items:
 - uid: excel.Excel.Interfaces.CommentLoadOptions
   summary: >-
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentLoadOptions.$all
+  - excel.Excel.Interfaces.CommentLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentLoadOptions.authorName
   - excel.Excel.Interfaces.CommentLoadOptions.content
+  - excel.Excel.Interfaces.CommentLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentLoadOptions.id
   - excel.Excel.Interfaces.CommentLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentLoadOptions.$all
@@ -36,9 +39,43 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.authorEmail
+  summary: >-
+    获取评论的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.authorName
+  summary: >-
+    获取批注的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.content
   summary: >-
-    获取/设置内容。
+    获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -53,9 +90,26 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentLoadOptions.creationDate
+  summary: >-
+    获取注释的创建时间。 如果注释转换为注释, 则返回 null, 如在此示例中, 注释将不会创建日期。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.id
   summary: >-
-    表示注释标识符。 只读。
+    表示批注标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -72,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentLoadOptions.isParent
   summary: >-
-    表示它是注释线程还是答复。 在此处始终返回 true。 只读。
+    表示它是批注线程还是回复。 在此处始终返回 True。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
