--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 76e1c07b73ca4305ec581a2c917cd2f38bf5368f
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d534a52f04ea4a577b2f6f933422d5904df47d2b
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115812"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575240"
 items:
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions
   summary: >-
@@ -21,7 +21,10 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.CommentReplyLoadOptions.$all
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.authorEmail
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.authorName
   - excel.Excel.Interfaces.CommentReplyLoadOptions.content
+  - excel.Excel.Interfaces.CommentReplyLoadOptions.creationDate
   - excel.Excel.Interfaces.CommentReplyLoadOptions.id
   - excel.Excel.Interfaces.CommentReplyLoadOptions.isParent
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.$all
@@ -36,9 +39,43 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorEmail
+  summary: >-
+    获取批注答复的作者电子邮件。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorEmail
+  fullName: authorEmail
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorEmail?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorName
+  summary: >-
+    获取批注答复的作者姓名。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: authorName
+  fullName: authorName
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'authorName?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.content
   summary: >-
-    获取/设置内容。
+    获取或设置内容。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -53,9 +90,26 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.CommentReplyLoadOptions.creationDate
+  summary: >-
+    获取批注答复的创建时间。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: creationDate
+  fullName: creationDate
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'creationDate?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.id
   summary: >-
-    表示批注答复标识符。 只读。
+    表示批注回复标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -72,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.isParent
   summary: >-
-    表示它是注释线程还是答复。 在此处始终返回 false。 只读。
+    表示它是批注线程还是回复。 在此处始终返回 False。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
