--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefillupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 276865e4347f74dac5f896e60317ef32d14f5e27
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0bdfd02c55effe953e57bd789957540802198cd6
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114531"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575632"
 items:
 - uid: excel.Excel.Interfaces.ShapeFillUpdateData
-  summary: 用于更新 ShapeFill 对象上的数据的接口, 用于在 "ShapeFill" 中使用 (<!-- -->{...}<!-- -->)".
+  summary: 一个用于更新 ShapeFill 对象上的数据的接口, 可用于 "ShapeFill (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.ShapeFillUpdateData
   fullName: Excel.Interfaces.ShapeFillUpdateData
   langs:
@@ -15,28 +15,28 @@ items:
   type: interface
   package: excel
   children:
-  - excel.Excel.Interfaces.ShapeFillUpdateData.foreColor
+  - excel.Excel.Interfaces.ShapeFillUpdateData.foregroundColor
   - excel.Excel.Interfaces.ShapeFillUpdateData.transparency
-- uid: excel.Excel.Interfaces.ShapeFillUpdateData.foreColor
+- uid: excel.Excel.Interfaces.ShapeFillUpdateData.foregroundColor
   summary: >-
-    代表形状填充的前景色, 格式为\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
+    代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: foreColor
-  fullName: foreColor
+  name: foregroundColor
+  fullName: foregroundColor
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'foreColor?: string;'
+    content: 'foregroundColor?: string;'
     return:
       type:
       - string
 - uid: excel.Excel.Interfaces.ShapeFillUpdateData.transparency
   summary: >-
-    以 0.0 (不透明) 到 1.0 (清除) 的值的形式返回或设置指定填充的透明度。 对于不支持 API 的形状类型或具有不一致透明度的特殊填充类型, 返回 null。 例如, 渐变填充类型可能具有不一致的透明胶片。
+    以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。 如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
