--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 31ed49fb8e58ba4d1714ed14a2f0613d54cc58a0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 82fa1b9d9ab131c88f98beb68300de28ac389385
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111556"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575877"
 items:
 - uid: excel.Excel.Interfaces.ShapeLineFormatData
   summary: 描述通过调用 "shapeLineFormat ()" 返回的数据的接口。
@@ -40,7 +40,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
   summary: >-
-    表示形状的线条样式。 当行不可见或具有混合的短划线样式属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或不一致的虚线样式, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -57,7 +57,7 @@ items:
       - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
 - uid: excel.Excel.Interfaces.ShapeLineFormatData.style
   summary: >-
-    表示形状对象的线条样式。 当行不可见或具有混合的行可见属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或样式不一致, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -74,7 +74,7 @@ items:
       - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
 - uid: excel.Excel.Interfaces.ShapeLineFormatData.transparency
   summary: >-
-    表示指定线条的透明度为 0.0 (不透明) 到 1.0 (清除) 的值的度数。 如果形状具有混和的线条透明度属性 (例如, shape 的 group 类型)), 则返回 null。
+    将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 如果形状具有不一致的透明胶片, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -91,7 +91,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ShapeLineFormatData.visible
   summary: >-
-    表示是否显示 shape 元素的线条格式。 当形状具有混合的线条可见属性 (例如, shape 的 group 类型) 时, 返回 null。
+    表示 shape 元素的行格式是否可见。 如果形状具有不一致的 visibilities, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -108,7 +108,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatData.weight
   summary: >-
-    表示线条的重量, 以磅为单位。 当行不可见或具有混合的线条粗细属性 (例如, 形状的组合类型) 时, 返回 null。
+    表示线条的粗细, 以磅为单位。 如果行不可见或线条粗细不一致, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
