--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f1f68c27900b8ef2326ba617152440f39483a86
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: b35fc2be4c3bc3e11b226191d3fc0113285c8946
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108231"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575721"
 items:
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions
   summary: >-
-    代表 shape 对象的线条格式。 对于 "图片" 和 "几何" 形状, 线条格式代表 shape 对象的边框。
+    代表 shape 对象的线条格式。 对于图像和几何形状, 线条格式表示形状的边框。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -58,7 +58,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.dashStyle
   summary: >-
-    表示形状的线条样式。 当行不可见或具有混合的短划线样式属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或不一致的虚线样式, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -75,7 +75,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.style
   summary: >-
-    表示形状对象的线条样式。 当行不可见或具有混合的行可见属性 (例如, 形状的组合类型) 时, 返回 null。 有关详细信息, 请参阅 ShapeLineStyle。
+    表示形状的线条样式。 如果行不可见或样式不一致, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -92,7 +92,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.transparency
   summary: >-
-    表示指定线条的透明度为 0.0 (不透明) 到 1.0 (清除) 的值的度数。 如果形状具有混和的线条透明度属性 (例如, shape 的 group 类型)), 则返回 null。
+    将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 如果形状具有不一致的透明胶片, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -109,7 +109,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.visible
   summary: >-
-    表示是否显示 shape 元素的线条格式。 当形状具有混合的线条可见属性 (例如, shape 的 group 类型) 时, 返回 null。
+    表示 shape 元素的行格式是否可见。 如果形状具有不一致的 visibilities, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -126,7 +126,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLineFormatLoadOptions.weight
   summary: >-
-    表示线条的重量, 以磅为单位。 当行不可见或具有混合的线条粗细属性 (例如, 形状的组合类型) 时, 返回 null。
+    表示线条的粗细, 以磅为单位。 如果行不可见或线条粗细不一致, 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
