--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapeloadoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c78a4a69085761020bf8025218b45b4887a14406
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: fb27bd447e2c068aa614bcca7606b42a1a4ffd34
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303149"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575695"
 items:
 - uid: excel.Excel.Interfaces.ShapeLoadOptions
   summary: >-
-    代表工作表中的一个通用 shape 对象。
+    代表工作表中的一个通用 shape 对象。 一个形状可以是一个几何形状、一条线、一组形状, 等等。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -60,7 +60,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.altTextDescription
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代的描述性文本字符串。
+    返回或设置 Shape 对象的替代说明文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -77,7 +77,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.altTextTitle
   summary: >-
-    返回或设置在将对象保存到网页时, Shape 对象的替代标题文本字符串。
+    返回或设置 Shape 对象的可选标题文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -94,7 +94,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.connectionSiteCount
   summary: >-
-    返回指定形状中的连结点的数量。只读。
+    返回此形状上的连接网站数。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -111,7 +111,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.fill
   summary: >-
-    返回 shape 对象的填充格式。
+    返回此形状的填充格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -128,7 +128,7 @@ items:
       - excel.Excel.Interfaces.ShapeFillLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.geometricShape
   summary: >-
-    返回 shape 对象的几何形状。 如果 shape 对象是其他形状类型 (如图像、SmartArt 等) 而不是 GeometricShape, 则会引发错误。
+    返回与形状相关联的几何形状。 如果形状类型不是 "GeometricShape", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -145,7 +145,7 @@ items:
       - excel.Excel.Interfaces.GeometricShapeLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.geometricShapeType
   summary: >-
-    代表指定形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状不是几何图形 (例如, get GeometricShapeType of line 或 chart 将返回 null), 则返回 null。
+    表示此几何形状的几何形状类型。 有关详细信息, 请参阅 GeometricShapeType。 如果形状类型不是 "GeometricShape", 则返回 null。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -162,7 +162,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.group
   summary: >-
-    返回 shape 对象的形状组。 如果 shape 对象是其他形状类型 (如图像、SmartArt 等) 而不是 GroupShape, 则会引发错误。
+    返回与形状关联的形状组。 如果形状类型不是 "GroupShape", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -179,7 +179,7 @@ items:
       - excel.Excel.Interfaces.ShapeGroupLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.height
   summary: >-
-    表示形状的高度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -196,7 +196,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.id
   summary: >-
-    代表形状标识符。 只读。
+    表示形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -213,7 +213,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.image
   summary: >-
-    返回 shape 对象的图像。 如果 shape 对象是其他形状类型 (如 GeometricShape、SmartArt 等) 而不是图像, 则会引发错误。
+    返回与形状相关联的图像。 如果形状类型不是 "Image", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -230,7 +230,7 @@ items:
       - excel.Excel.Interfaces.ImageLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.left
   summary: >-
-    形状左侧距工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状左侧到工作表左侧的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -247,7 +247,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.level
   summary: >-
-    代表指定形状的级别。 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 等等。
+    表示指定形状的级别。 例如, 级别0表示该形状不是任何组的一部分, 级别1表示该形状是顶级组的一部分, 而级别为2表示该形状是顶层的子组的一部分。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -264,7 +264,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.line
   summary: >-
-    返回 shape 对象的 line 对象。 如果 shape 对象是其他形状类型 (如 GeometricShape、SmartArt 等) 而不是图像, 则会引发错误。
+    返回与形状相关联的线条。 如果形状类型不是 "Line", 则会引发错误。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -281,7 +281,7 @@ items:
       - excel.Excel.Interfaces.LineLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.lineFormat
   summary: >-
-    返回 shape 对象的线条格式。
+    返回此形状的线条格式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -298,7 +298,7 @@ items:
       - excel.Excel.Interfaces.ShapeLineFormatLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.lockAspectRatio
   summary: >-
-    表示纵横比是否锁定, 以布尔形式表示的形状。
+    指定是否锁定此形状的纵横比。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -315,7 +315,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.name
   summary: >-
-    代表形状的名称。
+    表示形状的名称。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -332,7 +332,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.parentGroup
   summary: >-
-    代表指定形状的父组。
+    表示此形状的父组。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -349,7 +349,7 @@ items:
       - excel.Excel.Interfaces.ShapeLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.placement
   summary: >-
-    代表 placment 的值, 该值代表对象附加到其下的单元格的方式。
+    表示对象附加到其下的单元格的方式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -366,7 +366,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.rotation
   summary: >-
-    表示形状的旋转角度 (以度为单位)。
+    表示形状的旋转度数。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -383,7 +383,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.textFrame
   summary: >-
-    返回形状的 textFrame 对象。 只读。
+    返回此形状的文本框架对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -400,7 +400,7 @@ items:
       - excel.Excel.Interfaces.TextFrameLoadOptions
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.top
   summary: >-
-    从形状的上边缘到工作表的顶端之间的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    从形状的上边缘到工作表的上边缘之间的距离 (以磅为单位)。 当设置为负值作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -417,7 +417,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.type
   summary: >-
-    返回指定形状的类型。 只读。 有关详细信息, 请参阅 ShapeType。
+    返回此形状的类型。 有关详细信息, 请参阅 ShapeType。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -434,7 +434,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.visible
   summary: >-
-    表示指定形状的可见性 (以布尔值表示)。
+    表示此形状的可见性。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -451,7 +451,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.width
   summary: >-
-    表示形状的宽度 (以磅为单位)。 当设置为负值或零作为输入时, 将引发无效参数异常。
+    表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -468,7 +468,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ShapeLoadOptions.zorderPosition
   summary: >-
-    返回指定的形状在 z-顺序中的位置, 则底部形状的 z-顺序值为0。 只读。
+    返回指定的形状在 z-顺序中的位置, 0 表示顺序栈的底部。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
