--- a/docs/docs-ref-autogen/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.workbookdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5ab8351bbca643b04d52fe69555af6d164be1f98
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ec75f13d0fd303b3ae1c90b6a9ea4aa661d4df97
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094965"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575916"
 items:
 - uid: excel.Excel.Interfaces.WorkbookData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -25,20 +25,24 @@ items:
   - excel.Excel.Interfaces.WorkbookData.name
   - excel.Excel.Interfaces.WorkbookData.names
   - excel.Excel.Interfaces.WorkbookData.pivotTables
+  - excel.Excel.Interfaces.WorkbookData.pivotTableStyles
   - excel.Excel.Interfaces.WorkbookData.previouslySaved
   - excel.Excel.Interfaces.WorkbookData.properties
   - excel.Excel.Interfaces.WorkbookData.protection
   - excel.Excel.Interfaces.WorkbookData.readOnly
   - excel.Excel.Interfaces.WorkbookData.settings
   - excel.Excel.Interfaces.WorkbookData.slicers
+  - excel.Excel.Interfaces.WorkbookData.slicerStyles
   - excel.Excel.Interfaces.WorkbookData.styles
   - excel.Excel.Interfaces.WorkbookData.tables
+  - excel.Excel.Interfaces.WorkbookData.tableStyles
+  - excel.Excel.Interfaces.WorkbookData.timelineStyles
   - excel.Excel.Interfaces.WorkbookData.use1904DateSystem
   - excel.Excel.Interfaces.WorkbookData.usePrecisionAsDisplayed
   - excel.Excel.Interfaces.WorkbookData.worksheets
 - uid: excel.Excel.Interfaces.WorkbookData.autoSave
   summary: >-
-    如此如果工作簿处于自动保存模式。
+    指定工作簿是否处于自动保存模式。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -55,7 +59,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookData.bindings
   summary: >-
-    表示属于工作簿的绑定的集合。只读。
+    表示属于工作簿的绑定的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -71,7 +75,7 @@ items:
       - Excel.Interfaces.BindingData[]
 - uid: excel.Excel.Interfaces.WorkbookData.calculationEngineVersion
   summary: >-
-    返回有关 Excel 计算引擎版本的数字。 只读。
+    返回有关 Excel 计算引擎的版本号。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -88,7 +92,7 @@ items:
       - number
 - uid: excel.Excel.Interfaces.WorkbookData.chartDataPointTrack
   summary: >-
-    如此如果工作簿中的所有图表都跟踪它们所附加到的实际数据点。 假如果图表跟踪数据点的索引。
+    如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -105,7 +109,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookData.comments
   summary: >-
-    代表与工作簿相关联的注释的集合。 只读。
+    表示与工作簿关联的批注集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -122,7 +126,7 @@ items:
       - Excel.Interfaces.CommentData[]
 - uid: excel.Excel.Interfaces.WorkbookData.customXmlParts
   summary: >-
-    代表此工作簿包含的自定义 XML 部件的集合。只读。
+    表示此工作簿包含的自定义 XML 部件的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -138,7 +142,7 @@ items:
       - Excel.Interfaces.CustomXmlPartData[]
 - uid: excel.Excel.Interfaces.WorkbookData.isDirty
   summary: >-
-    如此如果指定的工作簿自上次保存以来未发生任何更改。 如果要关闭某个已更改的工作簿，但又不想保存它或者不想出现保存提示，则可将此属性设为 True。
+    指定自上次保存工作簿后是否进行过更改。 如果要关闭修改过的工作簿而不保存或提示保存它, 则可以将该属性设置为 true。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -171,7 +175,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.WorkbookData.names
   summary: >-
-    表示工作簿范围内的已命名项目（称为区域和常量）的集合。只读。
+    表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -187,7 +191,7 @@ items:
       - Excel.Interfaces.NamedItemData[]
 - uid: excel.Excel.Interfaces.WorkbookData.pivotTables
   summary: >-
-    表示一组与 workbook 相关联的 PivotTable 对象。只读。
+    表示一组与 workbook 相关联的 PivotTable 对象。 只读。
 
 
     \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -201,9 +205,26 @@ items:
     return:
       type:
       - Excel.Interfaces.PivotTableData[]
+- uid: excel.Excel.Interfaces.WorkbookData.pivotTableStyles
+  summary: >-
+    代表与工作簿相关联的 PivotTableStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: pivotTableStyles
+  fullName: pivotTableStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'pivotTableStyles?: Excel.Interfaces.PivotTableStyleData[];'
+    return:
+      type:
+      - Excel.Interfaces.PivotTableStyleData[]
 - uid: excel.Excel.Interfaces.WorkbookData.previouslySaved
   summary: >-
-    如此如果工作簿曾经保存在本地或联机。
+    指定是否曾在本地或联机保存工作簿。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -268,7 +289,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookData.settings
   summary: >-
-    表示一组与 workbook 相关联的 setting 对象。只读。
+    表示一组与 workbook 相关联的 setting 对象。 只读。
 
 
     \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -284,7 +305,7 @@ items:
       - Excel.Interfaces.SettingData[]
 - uid: excel.Excel.Interfaces.WorkbookData.slicers
   summary: >-
-    表示与工作簿关联的切片器的集合。 只读。
+    表示与工作簿关联的切片器集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -299,6 +320,23 @@ items:
     return:
       type:
       - Excel.Interfaces.SlicerData[]
+- uid: excel.Excel.Interfaces.WorkbookData.slicerStyles
+  summary: >-
+    代表与工作簿相关联的 SlicerStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: slicerStyles
+  fullName: slicerStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'slicerStyles?: Excel.Interfaces.SlicerStyleData[];'
+    return:
+      type:
+      - Excel.Interfaces.SlicerStyleData[]
 - uid: excel.Excel.Interfaces.WorkbookData.styles
   summary: >-
     表示与工作簿关联的样式的集合。 只读。
@@ -317,7 +355,7 @@ items:
       - Excel.Interfaces.StyleData[]
 - uid: excel.Excel.Interfaces.WorkbookData.tables
   summary: >-
-    表示与工作簿关联的表的集合。只读。
+    表示与工作簿关联的表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -331,9 +369,43 @@ items:
     return:
       type:
       - Excel.Interfaces.TableData[]
+- uid: excel.Excel.Interfaces.WorkbookData.tableStyles
+  summary: >-
+    代表与工作簿相关联的 TableStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: tableStyles
+  fullName: tableStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'tableStyles?: Excel.Interfaces.TableStyleData[];'
+    return:
+      type:
+      - Excel.Interfaces.TableStyleData[]
+- uid: excel.Excel.Interfaces.WorkbookData.timelineStyles
+  summary: >-
+    代表与工作簿相关联的 TimelineStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: timelineStyles
+  fullName: timelineStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'timelineStyles?: Excel.Interfaces.TimelineStyleData[];'
+    return:
+      type:
+      - Excel.Interfaces.TimelineStyleData[]
 - uid: excel.Excel.Interfaces.WorkbookData.use1904DateSystem
   summary: >-
-    如此如果工作簿使用1904日期系统。
+    如果工作簿使用 1904 日期系统，则为 True。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -350,7 +422,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookData.usePrecisionAsDisplayed
   summary: >-
-    如此如果工作簿中的计算将仅使用显示的数字的精度完成。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
+    如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -367,7 +439,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookData.worksheets
   summary: >-
-    表示与工作簿关联的工作表的集合。只读。
+    表示与工作簿关联的工作表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
