--- a/docs/docs-ref-autogen/excel/excel.interfaces.workbookupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.workbookupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d60addeb8b9d2df80957db1df4de4ff37bfd47c9
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: c622902cefe0fc51a24d2db4bab0694e2c6d09eb
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098395"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575166"
 items:
 - uid: excel.Excel.Interfaces.WorkbookUpdateData
-  summary: 一个用于更新工作簿对象上的数据的接口, 可用于 "工作簿.<!-- -->set ({...}"<!-- -->)".
+  summary: 一个用于更新工作簿对象上的数据的接口, 可用于 "工作簿. set (<!-- -->{ ... }<!-- -->)".
   name: Excel.Interfaces.WorkbookUpdateData
   fullName: Excel.Interfaces.WorkbookUpdateData
   langs:
@@ -22,7 +22,7 @@ items:
   - excel.Excel.Interfaces.WorkbookUpdateData.usePrecisionAsDisplayed
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.chartDataPointTrack
   summary: >-
-    如此如果工作簿中的所有图表都跟踪它们所附加到的实际数据点。 假如果图表跟踪数据点的索引。
+    如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -39,7 +39,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.isDirty
   summary: >-
-    如此如果指定的工作簿自上次保存以来未发生任何更改。 如果要关闭某个已更改的工作簿，但又不想保存它或者不想出现保存提示，则可将此属性设为 True。
+    指定自上次保存工作簿后是否进行过更改。 如果要关闭修改过的工作簿而不保存或提示保存它, 则可以将该属性设置为 true。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -72,7 +72,7 @@ items:
       - excel.Excel.Interfaces.DocumentPropertiesUpdateData
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.use1904DateSystem
   summary: >-
-    如此如果工作簿使用1904日期系统。
+    如果工作簿使用 1904 日期系统，则为 True。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -89,7 +89,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.WorkbookUpdateData.usePrecisionAsDisplayed
   summary: >-
-    如此如果工作簿中的计算将仅使用显示的数字的精度完成。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
+    如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
