--- a/docs/docs-ref-autogen/excel/excel.pagebreak.yml
+++ b/docs/docs-ref-autogen/excel/excel.pagebreak.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 862cd42ff87e10aba5586ddbc997a6358e412540
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f0b8cbe0e3bea5ab9f964bde7a4abe3e37f95676
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114377"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575506"
 items:
 - uid: excel.Excel.PageBreak
   summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
@@ -21,7 +21,7 @@ items:
   - excel.Excel.PageBreak.columnIndex
   - excel.Excel.PageBreak.context
   - excel.Excel.PageBreak.delete
-  - excel.Excel.PageBreak.getStartCell
+  - excel.Excel.PageBreak.getCellAfterBreak
   - excel.Excel.PageBreak.load
   - excel.Excel.PageBreak.load_1
   - excel.Excel.PageBreak.load_2
@@ -29,7 +29,7 @@ items:
   - excel.Excel.PageBreak.toJSON
 - uid: excel.Excel.PageBreak.columnIndex
   summary: >-
-    代表分页符的列索引
+    表示分页符的列索引
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -75,26 +75,26 @@ items:
       type:
       - void
       description: ''
-- uid: excel.Excel.PageBreak.getStartCell
+- uid: excel.Excel.PageBreak.getCellAfterBreak
   summary: >-
     获取分页符后的第一个单元格。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: getStartCell()
-  fullName: getStartCell()
+  name: getCellAfterBreak()
+  fullName: getCellAfterBreak()
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getStartCell(): Excel.Range;'
+    content: 'getCellAfterBreak(): Excel.Range;'
     return:
       type:
       - excel.Excel.Range
       description: ''
 - uid: excel.Excel.PageBreak.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -124,7 +124,7 @@ items:
       type:
       - excel.Excel.Interfaces.PageBreakLoadOptions
 - uid: excel.Excel.PageBreak.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -143,7 +143,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.PageBreak.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -163,7 +163,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.PageBreak.rowIndex
   summary: >-
-    代表分页符的行索引
+    表示分页符的行索引
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -179,7 +179,7 @@ items:
       type:
       - number
 - uid: excel.Excel.PageBreak.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 PageBreak 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.PageBreakData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 PageBreak 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.PageBreakData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
