--- a/docs/docs-ref-autogen/excel/excel.shapegroup.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapegroup.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f160fb13ca329da4a7e7cbb35cf0a3583687c850
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a648222a12f5a62587e777417d675459a62b9dab
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116029"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575743"
 items:
 - uid: excel.Excel.ShapeGroup
   summary: >-
-    代表工作表中的形状组对象。
+    代表工作表中的形状组。 若要获取相应的 Shape 对象, 请使用`ShapeGroup.shape`<!-- -->.
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -46,7 +46,7 @@ items:
       - RequestContext
 - uid: excel.Excel.ShapeGroup.id
   summary: >-
-    代表形状标识符。 只读。
+    表示形状标识符。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -62,7 +62,7 @@ items:
       type:
       - string
 - uid: excel.Excel.ShapeGroup.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -92,7 +92,7 @@ items:
       type:
       - excel.Excel.Interfaces.ShapeGroupLoadOptions
 - uid: excel.Excel.ShapeGroup.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -111,7 +111,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.ShapeGroup.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -131,7 +131,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.ShapeGroup.shape
   summary: >-
-    返回组的 shape 对象。 只读。
+    返回与组相关联的 Shape 对象。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -148,7 +148,7 @@ items:
       - excel.Excel.Shape
 - uid: excel.Excel.ShapeGroup.shapes
   summary: >-
-    返回组中的形状集合。 只读。
+    返回 Shape 对象的集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -164,7 +164,7 @@ items:
       type:
       - excel.Excel.GroupShapeCollection
 - uid: excel.Excel.ShapeGroup.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 ShapeGroup 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.ShapeGroupData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeGroup 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeGroupData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
@@ -179,7 +179,7 @@ items:
       description: ''
 - uid: excel.Excel.ShapeGroup.ungroup
   summary: >-
-    取消组合指定形状组中的任何组合形状。
+    取消分组指定形状组中的任何已分组形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -194,4 +194,4 @@ items:
     return:
       type:
       - void
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n\n    const shapeGroup = sheet.shapes.getItem(\"Group\").group;\n    shapeGroup.ungroup();\n    console.log(\"Shapes ungrouped\");\n\n    await context.sync();\n});\n```"
