--- a/docs/docs-ref-autogen/excel/excel.shapelinedashstyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelinedashstyle.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 26a60c7ef7aab8fee7c902ca575b934f337393cf
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 73f4f6e9e91ce68d04cd6fbd3a8df7efce24dd2c
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108427"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575618"
 items:
 - uid: excel.Excel.ShapeLineDashStyle
-  summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+  summary: >-
+    线条的虚线样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
   name: Excel.ShapeLineDashStyle
   fullName: Excel.ShapeLineDashStyle
