--- a/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0b20523f2176c62a8b08d8944129e693bcfa20b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 165be27485a0cdd283421993910bce4f973d537f
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109722"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575226"
 items:
 - uid: excel.Excel.ShapeLineStyle
-  summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+  summary: >-
+    线条的样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
   name: Excel.ShapeLineStyle
   fullName: Excel.ShapeLineStyle
@@ -22,6 +26,7 @@ items:
   - excel.Excel.ShapeLineStyle.thinThick
   - excel.Excel.ShapeLineStyle.thinThin
 - uid: excel.Excel.ShapeLineStyle.single
+  summary: 单线。
   isPreview: true
   name: single
   fullName: single
@@ -30,6 +35,7 @@ items:
   type: field
   numericValue: "\"Single\""
 - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
+  summary: 粗线每一侧各带一条细线。
   isPreview: true
   name: thickBetweenThin
   fullName: thickBetweenThin
@@ -38,6 +44,7 @@ items:
   type: field
   numericValue: "\"ThickBetweenThin\""
 - uid: excel.Excel.ShapeLineStyle.thickThin
+  summary: 粗线位于细线旁边。 对于水平线, 粗线位于细线上方。 对于垂直线, 粗线位于细线的左侧。
   isPreview: true
   name: thickThin
   fullName: thickThin
@@ -46,6 +53,7 @@ items:
   type: field
   numericValue: "\"ThickThin\""
 - uid: excel.Excel.ShapeLineStyle.thinThick
+  summary: 粗线位于细线旁边。 对于水平线, 粗线位于细线下方。 对于垂直线条, 粗线位于细线的右侧。
   isPreview: true
   name: thinThick
   fullName: thinThick
@@ -54,6 +62,7 @@ items:
   type: field
   numericValue: "\"ThinThick\""
 - uid: excel.Excel.ShapeLineStyle.thinThin
+  summary: 双细线。
   isPreview: true
   name: thinThin
   fullName: thinThin
