--- a/docs/docs-ref-autogen/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel/excel.workbook.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 81eb4cb2aeddc0bd92ad7e7900eb9482b0f2a02c
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: af5d97057c890eaa798f45a16035191eda41ae14
+ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303247"
+ms.lasthandoff: 03/14/2019
+ms.locfileid: "30575807"
 items:
 - uid: excel.Excel.Workbook
   summary: >-
-    工作簿是顶级对象，它包含相关 workbook 对象，例如工作表、表、范围等。
+    Workbook 是顶级对象，包含相关 Workbook 对象，如工作表、表、区域等。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -50,6 +50,7 @@ items:
   - excel.Excel.Workbook.onAutoSaveSettingChanged
   - excel.Excel.Workbook.onSelectionChanged
   - excel.Excel.Workbook.pivotTables
+  - excel.Excel.Workbook.pivotTableStyles
   - excel.Excel.Workbook.previouslySaved
   - excel.Excel.Workbook.properties
   - excel.Excel.Workbook.protection
@@ -60,8 +61,11 @@ items:
   - excel.Excel.Workbook.set_1
   - excel.Excel.Workbook.settings
   - excel.Excel.Workbook.slicers
+  - excel.Excel.Workbook.slicerStyles
   - excel.Excel.Workbook.styles
   - excel.Excel.Workbook.tables
+  - excel.Excel.Workbook.tableStyles
+  - excel.Excel.Workbook.timelineStyles
   - excel.Excel.Workbook.toJSON
   - excel.Excel.Workbook.use1904DateSystem
   - excel.Excel.Workbook.usePrecisionAsDisplayed
@@ -84,7 +88,7 @@ items:
       - excel.Excel.Application
 - uid: excel.Excel.Workbook.autoSave
   summary: >-
-    如此如果工作簿处于自动保存模式。
+    指定工作簿是否处于自动保存模式。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -101,7 +105,7 @@ items:
       - boolean
 - uid: excel.Excel.Workbook.bindings
   summary: >-
-    表示属于工作簿的绑定的集合。只读。
+    表示属于工作簿的绑定的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -117,7 +121,7 @@ items:
       - excel.Excel.BindingCollection
 - uid: excel.Excel.Workbook.calculationEngineVersion
   summary: >-
-    返回有关 Excel 计算引擎版本的数字。 只读。
+    返回有关 Excel 计算引擎的版本号。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -134,7 +138,7 @@ items:
       - number
 - uid: excel.Excel.Workbook.chartDataPointTrack
   summary: >-
-    如此如果工作簿中的所有图表都跟踪它们所附加到的实际数据点。 假如果图表跟踪数据点的索引。
+    如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -197,7 +201,7 @@ items:
       - "\"Save\" | \"SkipSave\""
 - uid: excel.Excel.Workbook.comments
   summary: >-
-    代表与工作簿相关联的注释的集合。 只读。
+    表示与工作簿关联的批注集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -226,7 +230,7 @@ items:
       - RequestContext
 - uid: excel.Excel.Workbook.customXmlParts
   summary: >-
-    代表此工作簿包含的自定义 XML 部件的集合。只读。
+    表示此工作簿包含的自定义 XML 部件的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -291,7 +295,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n\n    let myWorkbook = context.workbook;\n    let activeCell = myWorkbook.getActiveCell();\n    activeCell.load(\"address\");\n\n    await context.sync();\n    \n    console.log(\"The active cell is \" + activeCell.address);\n});\n```"
 - uid: excel.Excel.Workbook.getActiveChart
   summary: >-
-    获取工作簿中当前处于活动状态的图表。 如果没有活动图表, 则在调用此语句时将引发异常
+    获取工作簿中的当前活动图表。 如果没有活动图表，则在调用此语句时将引发异常
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -309,7 +313,7 @@ items:
       description: ''
 - uid: excel.Excel.Workbook.getActiveChartOrNullObject
   summary: >-
-    获取工作簿中当前处于活动状态的图表。 如果没有活动图表, 将返回 null 对象
+    获取工作簿中的当前活动图表。 如果没有活动图表，则返回 null 对象
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -327,7 +331,7 @@ items:
       description: ''
 - uid: excel.Excel.Workbook.getActiveSlicer
   summary: >-
-    获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器, 则在调用此语句时将引发异常。
+    获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器，则在调用此语句时将引发异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -345,7 +349,7 @@ items:
       description: ''
 - uid: excel.Excel.Workbook.getActiveSlicerOrNullObject
   summary: >-
-    获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器, 将返回 null 对象
+    获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器，则返回 null 对象
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -363,7 +367,7 @@ items:
       description: ''
 - uid: excel.Excel.Workbook.getIsActiveCollabSession
   summary: >-
-    如此如果工作簿正由多个用户 (共同创作) 编辑。 请注意, 当工作簿状态发生变化以及更改在方法结果上反映时, 可能会有一些延迟。
+    如果多个用户正在编辑工作簿（共同创作），则为 True。 请注意, 当工作簿状态发生变化以及更改在方法结果上反映时, 可能会有一些延迟。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -398,7 +402,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (ctx) { \n    var selectedRange = ctx.workbook.getSelectedRange();\n    selectedRange.load('address');\n    return ctx.sync().then(function() {\n            console.log(selectedRange.address);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.Workbook.getSelectedRanges
   summary: >-
-    从工作簿中获取当前选定的一个或多个区域。 与 getSelectedRange () 不同, 此方法返回一个 RangeAreas 对象, 该对象表示所有选定区域。
+    从工作簿中获取当前选定的一个或多个区域。 与 getSelectedRange() 不同，此方法返回表示所有选定区域的 RangeAreas 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -416,7 +420,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n\n    const selectedRanges = context.workbook.getSelectedRanges();\n    selectedRanges.format.fill.color = \"lightblue\";\n\n    await context.sync();\n})\n```"
 - uid: excel.Excel.Workbook.isDirty
   summary: >-
-    如此如果指定的工作簿自上次保存以来未发生任何更改。 如果要关闭某个已更改的工作簿，但又不想保存它或者不想出现保存提示，则可将此属性设为 True。
+    指定自上次保存工作簿后是否进行过更改。 如果要关闭修改过的工作簿而不保存或提示保存它, 则可以将该属性设置为 true。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -432,7 +436,7 @@ items:
       type:
       - boolean
 - uid: excel.Excel.Workbook.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -461,7 +465,7 @@ items:
       type:
       - excel.Excel.Interfaces.WorkbookLoadOptions
 - uid: excel.Excel.Workbook.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNames)
   fullName: load(propertyNames)
   langs:
@@ -479,7 +483,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.Workbook.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
   langs:
@@ -514,7 +518,7 @@ items:
       - string
 - uid: excel.Excel.Workbook.names
   summary: >-
-    表示工作簿范围内的已命名项目（称为区域和常量）的集合。只读。
+    表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -563,7 +567,7 @@ items:
       - OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
 - uid: excel.Excel.Workbook.pivotTables
   summary: >-
-    表示一组与 workbook 相关联的 PivotTable 对象。只读。
+    表示一组与 workbook 相关联的 PivotTable 对象。 只读。
 
 
     \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -577,9 +581,26 @@ items:
     return:
       type:
       - excel.Excel.PivotTableCollection
+- uid: excel.Excel.Workbook.pivotTableStyles
+  summary: >-
+    代表与工作簿相关联的 PivotTableStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: pivotTableStyles
+  fullName: pivotTableStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly pivotTableStyles: Excel.PivotTableStyleCollection;'
+    return:
+      type:
+      - excel.Excel.PivotTableStyleCollection
 - uid: excel.Excel.Workbook.previouslySaved
   summary: >-
-    如此如果工作簿曾经保存在本地或联机。
+    指定是否曾在本地或联机保存工作簿。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -736,7 +757,7 @@ items:
       - excel.Excel.Workbook
 - uid: excel.Excel.Workbook.settings
   summary: >-
-    表示一组与 workbook 相关联的 setting 对象。只读。
+    表示一组与 workbook 相关联的 setting 对象。 只读。
 
 
     \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -752,7 +773,7 @@ items:
       - excel.Excel.SettingCollection
 - uid: excel.Excel.Workbook.slicers
   summary: >-
-    表示与工作簿关联的切片器的集合。 只读。
+    表示与工作簿关联的切片器集合。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -767,6 +788,23 @@ items:
     return:
       type:
       - excel.Excel.SlicerCollection
+- uid: excel.Excel.Workbook.slicerStyles
+  summary: >-
+    代表与工作簿相关联的 SlicerStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: slicerStyles
+  fullName: slicerStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly slicerStyles: Excel.SlicerStyleCollection;'
+    return:
+      type:
+      - excel.Excel.SlicerStyleCollection
 - uid: excel.Excel.Workbook.styles
   summary: >-
     表示与工作簿关联的样式的集合。 只读。
@@ -785,7 +823,7 @@ items:
       - excel.Excel.StyleCollection
 - uid: excel.Excel.Workbook.tables
   summary: >-
-    表示与工作簿关联的表的集合。只读。
+    表示与工作簿关联的表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -799,8 +837,42 @@ items:
     return:
       type:
       - excel.Excel.TableCollection
+- uid: excel.Excel.Workbook.tableStyles
+  summary: >-
+    代表与工作簿相关联的 TableStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: tableStyles
+  fullName: tableStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly tableStyles: Excel.TableStyleCollection;'
+    return:
+      type:
+      - excel.Excel.TableStyleCollection
+- uid: excel.Excel.Workbook.timelineStyles
+  summary: >-
+    代表与工作簿相关联的 TimelineStyles 的集合。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: timelineStyles
+  fullName: timelineStyles
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly timelineStyles: Excel.TimelineStyleCollection;'
+    return:
+      type:
+      - excel.Excel.TimelineStyleCollection
 - uid: excel.Excel.Workbook.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始的 Excel 工作簿对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.WorkbookData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 工作簿对象是 API 对象, 但`toJSON`方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.WorkbookData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。
   name: toJSON()
   fullName: toJSON()
   langs:
@@ -814,7 +886,7 @@ items:
       description: ''
 - uid: excel.Excel.Workbook.use1904DateSystem
   summary: >-
-    如此如果工作簿使用1904日期系统。
+    如果工作簿使用 1904 日期系统，则为 True。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -831,7 +903,7 @@ items:
       - boolean
 - uid: excel.Excel.Workbook.usePrecisionAsDisplayed
   summary: >-
-    如此如果工作簿中的计算将仅使用显示的数字的精度完成。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
+    如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时, 数据将永久丢失精度。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -848,7 +920,7 @@ items:
       - boolean
 - uid: excel.Excel.Workbook.worksheets
   summary: >-
-    表示与工作簿关联的工作表的集合。只读。
+    表示与工作簿关联的工作表的集合。 只读。
 
 
     \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
